@@ -23,10 +23,11 @@ import org.prebid.server.auction.ImplicitParametersExtractor;
 import org.prebid.server.auction.OrtbTypesResolver;
 import org.prebid.server.auction.PriceGranularity;
 import org.prebid.server.auction.StoredRequestProcessor;
-import org.prebid.server.auction.TimeoutResolver;
+import org.prebid.server.auction.gpp.AmpGppService;
 import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.ConsentType;
 import org.prebid.server.auction.privacycontextfactory.AmpPrivacyContextFactory;
+import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.metric.MetricName;
@@ -49,11 +50,11 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequestTargeting;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtStoredRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
-import org.prebid.server.proto.request.Targeting;
 import org.prebid.server.settings.model.Account;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -75,44 +76,47 @@ public class AmpRequestFactory {
     private static final String SLOT_REQUEST_PARAM = "slot";
     private static final String TIMEOUT_REQUEST_PARAM = "timeout";
     private static final String GDPR_CONSENT_PARAM = "gdpr_consent";
-    private static final String CONSENT_PARAM = "consent_string";
+    private static final String CONSENT_STRING_PARAM = "consent_string";
     private static final String GDPR_APPLIES_PARAM = "gdpr_applies";
     private static final String CONSENT_TYPE_PARAM = "consent_type";
     private static final String ADDTL_CONSENT_PARAM = "addtl_consent";
+    private static final String GPP_SID_PARAM = "gpp_sid";
 
     private static final int NO_LIMIT_SPLIT_MODE = -1;
-    private static final String AMP_CHANNEL = "amp";
     private static final String ENDPOINT = Endpoint.openrtb2_amp.value();
 
     private final Ortb2RequestFactory ortb2RequestFactory;
     private final StoredRequestProcessor storedRequestProcessor;
+    private final BidRequestOrtbVersionConversionManager ortbVersionConversionManager;
+    private final AmpGppService gppService;
     private final OrtbTypesResolver ortbTypesResolver;
     private final ImplicitParametersExtractor implicitParametersExtractor;
     private final Ortb2ImplicitParametersResolver paramsResolver;
     private final FpdResolver fpdResolver;
     private final AmpPrivacyContextFactory ampPrivacyContextFactory;
-    private final TimeoutResolver timeoutResolver;
     private final DebugResolver debugResolver;
     private final JacksonMapper mapper;
 
-    public AmpRequestFactory(StoredRequestProcessor storedRequestProcessor,
-                             Ortb2RequestFactory ortb2RequestFactory,
+    public AmpRequestFactory(Ortb2RequestFactory ortb2RequestFactory,
+                             StoredRequestProcessor storedRequestProcessor,
+                             BidRequestOrtbVersionConversionManager ortbVersionConversionManager,
+                             AmpGppService gppService,
                              OrtbTypesResolver ortbTypesResolver,
                              ImplicitParametersExtractor implicitParametersExtractor,
                              Ortb2ImplicitParametersResolver paramsResolver,
                              FpdResolver fpdResolver,
                              AmpPrivacyContextFactory ampPrivacyContextFactory,
-                             TimeoutResolver timeoutResolver,
                              DebugResolver debugResolver,
                              JacksonMapper mapper) {
 
-        this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
         this.ortb2RequestFactory = Objects.requireNonNull(ortb2RequestFactory);
+        this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
+        this.ortbVersionConversionManager = Objects.requireNonNull(ortbVersionConversionManager);
+        this.gppService = Objects.requireNonNull(gppService);
         this.ortbTypesResolver = Objects.requireNonNull(ortbTypesResolver);
         this.implicitParametersExtractor = Objects.requireNonNull(implicitParametersExtractor);
         this.paramsResolver = Objects.requireNonNull(paramsResolver);
         this.fpdResolver = Objects.requireNonNull(fpdResolver);
-        this.timeoutResolver = Objects.requireNonNull(timeoutResolver);
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.ampPrivacyContextFactory = Objects.requireNonNull(ampPrivacyContextFactory);
         this.mapper = Objects.requireNonNull(mapper);
@@ -129,6 +133,7 @@ public class AmpRequestFactory {
 
         return ortb2RequestFactory.executeEntrypointHooks(routingContext, body, initialAuctionContext)
                 .compose(httpRequest -> parseBidRequest(initialAuctionContext, httpRequest)
+
                         .map(bidRequest -> ortb2RequestFactory.enrichAuctionContext(
                                 initialAuctionContext, httpRequest, bidRequest, startTime)))
 
@@ -136,6 +141,12 @@ public class AmpRequestFactory {
                         .map(auctionContext::with))
 
                 .map(auctionContext -> auctionContext.with(debugResolver.debugContextFrom(auctionContext)))
+
+                .compose(auctionContext -> gppService.contextFrom(auctionContext)
+                        .map(auctionContext::with))
+
+                .compose(auctionContext -> ortb2RequestFactory.activityInfrastructureFrom(auctionContext)
+                        .map(auctionContext::with))
 
                 .compose(auctionContext -> updateBidRequest(auctionContext)
                         .map(auctionContext::with))
@@ -149,7 +160,11 @@ public class AmpRequestFactory {
                 .compose(auctionContext -> ortb2RequestFactory.executeProcessedAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
 
-                .compose(ortb2RequestFactory::populateDealsInfo)
+                .compose(ortb2RequestFactory::populateUserAdditionalInfo)
+
+                .map(ortb2RequestFactory::enrichWithPriceFloors)
+
+                .map(auctionContext -> ortb2RequestFactory.updateTimeout(auctionContext, startTime))
 
                 .recover(ortb2RequestFactory::restoreResultFromRejection);
     }
@@ -170,13 +185,15 @@ public class AmpRequestFactory {
 
         final String addtlConsent = addtlConsentFromQueryStringParams(httpRequest);
         final Integer gdpr = gdprFromQueryStringParams(httpRequest);
+        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(httpRequest);
+        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Integer debug = debugFromQueryStringParam(httpRequest);
         final Long timeout = timeoutFromQueryString(httpRequest);
 
         final BidRequest bidRequest = BidRequest.builder()
                 .site(createSite(httpRequest))
                 .user(createUser(consentParam, addtlConsent))
-                .regs(createRegs(consentParam, gdpr))
+                .regs(createRegs(consentParam, gppSidExtraction, gdpr, gpc))
                 .test(debug)
                 .tmax(timeout)
                 .ext(createExt(httpRequest, tagId, debug))
@@ -189,11 +206,11 @@ public class AmpRequestFactory {
         final ConsentType specifiedConsentType = ConsentType.from(httpRequest.getQueryParams().get(CONSENT_TYPE_PARAM));
         final CaseInsensitiveMultiMap queryParams = httpRequest.getQueryParams();
 
-        final String consentParam = queryParams.get(CONSENT_PARAM);
+        final String consentStringParam = queryParams.get(CONSENT_STRING_PARAM);
         final String gdprConsentParam = queryParams.get(GDPR_CONSENT_PARAM);
 
-        return StringUtils.isNotBlank(consentParam)
-                ? toConsentParam(consentParam, CONSENT_PARAM, specifiedConsentType)
+        return StringUtils.isNotBlank(consentStringParam)
+                ? toConsentParam(consentStringParam, CONSENT_STRING_PARAM, specifiedConsentType)
                 : toConsentParam(gdprConsentParam, GDPR_CONSENT_PARAM, specifiedConsentType);
     }
 
@@ -244,19 +261,36 @@ public class AmpRequestFactory {
                 ? ConsentedProvidersSettings.of(addtlConsent)
                 : null;
 
-        final ExtUser extUser = ExtUser.builder()
-                .consent(consent)
+        final ExtUser extUser = consentedProvidersSettings != null
+                ? ExtUser.builder()
                 .consentedProvidersSettings(consentedProvidersSettings)
-                .build();
+                .build()
+                : null;
 
-        return User.builder().ext(extUser).build();
+        return User.builder().consent(consent).ext(extUser).build();
     }
 
-    private static Regs createRegs(ConsentParam consentParam, Integer gdpr) {
+    private static Regs createRegs(ConsentParam consentParam,
+                                   GppSidExtraction gppSidExtraction,
+                                   Integer gdpr,
+                                   String gpc) {
+
         final String usPrivacy = consentParam.isCcpaCompatible() ? consentParam.getConsentString() : null;
 
-        return gdpr != null || usPrivacy != null
-                ? Regs.of(null, ExtRegs.of(gdpr, usPrivacy))
+        final boolean isSuccessGppSidExtraction = gppSidExtraction.isSuccessExtraction();
+        final List<Integer> gppSid = isSuccessGppSidExtraction ? gppSidExtraction.getGppSid() : null;
+        final String gpp = isSuccessGppSidExtraction && consentParam.isGppCompatible()
+                ? consentParam.getConsentString()
+                : null;
+
+        return gdpr != null || usPrivacy != null || gppSid != null || gpp != null || gpc != null
+                ? Regs.builder()
+                .gdpr(gdpr)
+                .usPrivacy(usPrivacy)
+                .gppSid(gppSid)
+                .gpp(gpp)
+                .ext(gpc != null ? ExtRegs.of(null, null, gpc, null) : null)
+                .build()
                 : null;
     }
 
@@ -300,6 +334,22 @@ public class AmpRequestFactory {
         return null;
     }
 
+    private static GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest) {
+        final String gppSidParam = httpRequest.getQueryParams().get(GPP_SID_PARAM);
+
+        try {
+            final List<Integer> gppSid = StringUtils.isNotBlank(gppSidParam)
+                    ? Arrays.stream(gppSidParam.split(","))
+                    .map(Integer::valueOf)
+                    .toList()
+                    : null;
+
+            return GppSidExtraction.success(gppSid);
+        } catch (IllegalArgumentException e) {
+            return GppSidExtraction.failed();
+        }
+    }
+
     private static Long timeoutFromQueryString(HttpRequestContext httpRequest) {
         final String timeoutQueryParam = httpRequest.getQueryParams().get(TIMEOUT_REQUEST_PARAM);
         if (timeoutQueryParam == null) {
@@ -339,12 +389,20 @@ public class AmpRequestFactory {
         final HttpRequestContext httpRequest = auctionContext.getHttpRequest();
 
         return storedRequestProcessor.processAmpRequest(accountId, storedRequestId, receivedBidRequest)
+                .map(ortbVersionConversionManager::convertToAuctionSupportedVersion)
+                .map(bidRequest -> gppService.updateBidRequest(bidRequest, auctionContext))
                 .map(bidRequest -> validateStoredBidRequest(storedRequestId, bidRequest))
                 .map(this::fillExplicitParameters)
                 .map(bidRequest -> overrideParameters(bidRequest, httpRequest, auctionContext.getPrebidErrors()))
-                .map(bidRequest -> paramsResolver.resolve(bidRequest, httpRequest, timeoutResolver, ENDPOINT))
-                .compose(resolvedBidRequest ->
-                        ortb2RequestFactory.validateRequest(resolvedBidRequest, auctionContext.getDebugWarnings()));
+                .map(bidRequest -> paramsResolver.resolve(
+                        bidRequest,
+                        httpRequest,
+                        ENDPOINT,
+                        true))
+                .compose(resolvedBidRequest -> ortb2RequestFactory.validateRequest(
+                        resolvedBidRequest,
+                        auctionContext.getHttpRequest(),
+                        auctionContext.getDebugWarnings()));
     }
 
     private static String storedRequestId(BidRequest receivedBidRequest) {
@@ -361,18 +419,21 @@ public class AmpRequestFactory {
         final List<Imp> imps = bidRequest.getImp();
         if (CollectionUtils.isEmpty(imps)) {
             throw new InvalidRequestException(
-                    String.format("data for tag_id='%s' does not define the required imp array.", tagId));
+                    "data for tag_id='%s' does not define the required imp array.".formatted(tagId));
         }
 
         final int impSize = imps.size();
         if (impSize > 1) {
             throw new InvalidRequestException(
-                    String.format("data for tag_id '%s' includes %d imp elements. Only one is allowed", tagId,
-                            impSize));
+                    "data for tag_id '%s' includes %d imp elements. Only one is allowed".formatted(tagId, impSize));
         }
 
         if (bidRequest.getApp() != null) {
             throw new InvalidRequestException("request.app must not exist in AMP stored requests.");
+        }
+
+        if (bidRequest.getDooh() != null) {
+            throw new InvalidRequestException("request.dooh must not exist in AMP stored requests.");
         }
 
         return bidRequest;
@@ -438,19 +499,16 @@ public class AmpRequestFactory {
     private BidRequest overrideParameters(BidRequest bidRequest, HttpRequestContext httpRequest, List<String> errors) {
         final String requestTargeting = httpRequest.getQueryParams().get(TARGETING_REQUEST_PARAM);
         final ObjectNode targetingNode = readTargeting(requestTargeting);
-        ortbTypesResolver.normalizeTargeting(
-                targetingNode, errors, implicitParametersExtractor.refererFrom(httpRequest));
-        final Targeting targeting = parseTargeting(targetingNode);
+        final String referer = implicitParametersExtractor.refererFrom(httpRequest);
+        ortbTypesResolver.normalizeTargeting(targetingNode, errors, referer);
 
         final Site updatedSite = overrideSite(bidRequest.getSite());
         final Imp updatedImp = overrideImp(bidRequest.getImp().get(0), httpRequest, targetingNode);
-        final ExtRequest updatedExtBidRequest = overrideExtBidRequest(bidRequest.getExt(), targeting);
 
-        if (ObjectUtils.anyNotNull(updatedSite, updatedImp, updatedExtBidRequest)) {
+        if (ObjectUtils.anyNotNull(updatedSite, updatedImp)) {
             return bidRequest.toBuilder()
                     .site(updatedSite != null ? updatedSite : bidRequest.getSite())
                     .imp(updatedImp != null ? Collections.singletonList(updatedImp) : bidRequest.getImp())
-                    .ext(updatedExtBidRequest != null ? updatedExtBidRequest : bidRequest.getExt())
                     .build();
         }
 
@@ -465,7 +523,7 @@ public class AmpRequestFactory {
                     : null;
             return jsonNodeTargeting != null ? validateAndGetTargeting(jsonNodeTargeting) : null;
         } catch (JsonProcessingException | IllegalArgumentException e) {
-            throw new InvalidRequestException(String.format("Error reading targeting json %s", e.getMessage()));
+            throw new InvalidRequestException("Error reading targeting json " + e.getMessage());
         }
     }
 
@@ -473,18 +531,8 @@ public class AmpRequestFactory {
         if (jsonNodeTargeting.isObject()) {
             return (ObjectNode) jsonNodeTargeting;
         } else {
-            throw new InvalidRequestException(String.format("Error decoding targeting, expected type is `object` "
-                    + "but was %s", jsonNodeTargeting.getNodeType().name()));
-        }
-    }
-
-    private Targeting parseTargeting(ObjectNode targetingNode) {
-        try {
-            return targetingNode == null
-                    ? Targeting.empty()
-                    : mapper.mapper().treeToValue(targetingNode, Targeting.class);
-        } catch (JsonProcessingException e) {
-            throw new InvalidRequestException(String.format("Error decoding targeting from url: %s", e.getMessage()));
+            throw new InvalidRequestException("Error decoding targeting, expected type is `object` but was "
+                    + jsonNodeTargeting.getNodeType().name());
         }
     }
 
@@ -587,11 +635,11 @@ public class AmpRequestFactory {
         if (width != 0) {
             updatedFormats = formats.stream()
                     .map(format -> Format.builder().w(width).h(format.getH()).build())
-                    .collect(Collectors.toList());
+                    .toList();
         } else if (height != 0) {
             updatedFormats = formats.stream()
                     .map(format -> Format.builder().w(format.getW()).h(height).build())
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             updatedFormats = Collections.emptyList();
         }
@@ -602,13 +650,6 @@ public class AmpRequestFactory {
         return banner != null && CollectionUtils.isNotEmpty(formats)
                 ? banner.toBuilder().format(formats).build()
                 : banner;
-    }
-
-    /**
-     * Overrides {@link ExtRequest} with first party data.
-     */
-    private ExtRequest overrideExtBidRequest(ExtRequest extRequest, Targeting targeting) {
-        return fpdResolver.resolveBidRequestExt(extRequest, targeting);
     }
 
     private static List<Format> parseMultiSizeParam(String ms) {
@@ -707,6 +748,22 @@ public class AmpRequestFactory {
     }
 
     @Value(staticConstructor = "of")
+    private static class GppSidExtraction {
+
+        List<Integer> gppSid;
+
+        boolean successExtraction;
+
+        static GppSidExtraction success(List<Integer> gppSid) {
+            return GppSidExtraction.of(gppSid, true);
+        }
+
+        static GppSidExtraction failed() {
+            return GppSidExtraction.of(null, false);
+        }
+    }
+
+    @Value(staticConstructor = "of")
     private static class ConsentParam {
 
         String consentString;
@@ -728,6 +785,10 @@ public class AmpRequestFactory {
 
         public boolean isCcpaCompatible() {
             return (isConsentStringPresent() && specifiedType == ConsentType.CCPA) || isCcpa;
+        }
+
+        public boolean isGppCompatible() {
+            return isConsentStringPresent() && specifiedType == ConsentType.GPP;
         }
 
         public boolean isValid() {
