@@ -3,6 +3,7 @@ package org.prebid.server.auction.requestfactory;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.iab.openrtb.request.BidRequest;
+import com.iab.openrtb.request.Regs;
 import io.vertx.core.Future;
 import io.vertx.ext.web.RoutingContext;
 import org.prebid.server.auction.DebugResolver;
@@ -11,18 +12,22 @@ import org.prebid.server.auction.InterstitialProcessor;
 import org.prebid.server.auction.OrtbTypesResolver;
 import org.prebid.server.auction.PrivacyEnforcementService;
 import org.prebid.server.auction.StoredRequestProcessor;
-import org.prebid.server.auction.TimeoutResolver;
+import org.prebid.server.auction.gpp.AuctionGppService;
 import org.prebid.server.auction.model.AuctionContext;
+import org.prebid.server.auction.model.AuctionStoredResult;
+import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.metric.MetricName;
 import org.prebid.server.model.Endpoint;
 import org.prebid.server.model.HttpRequestContext;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
 import org.prebid.server.settings.model.Account;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 
 /**
  * Used in OpenRTB request processing.
@@ -32,11 +37,12 @@ public class AuctionRequestFactory {
     private final long maxRequestSize;
     private final Ortb2RequestFactory ortb2RequestFactory;
     private final StoredRequestProcessor storedRequestProcessor;
+    private final BidRequestOrtbVersionConversionManager ortbVersionConversionManager;
+    private final AuctionGppService gppService;
     private final ImplicitParametersExtractor paramsExtractor;
     private final Ortb2ImplicitParametersResolver paramsResolver;
     private final InterstitialProcessor interstitialProcessor;
     private final PrivacyEnforcementService privacyEnforcementService;
-    private final TimeoutResolver timeoutResolver;
     private final DebugResolver debugResolver;
     private final JacksonMapper mapper;
     private final OrtbTypesResolver ortbTypesResolver;
@@ -46,24 +52,26 @@ public class AuctionRequestFactory {
     public AuctionRequestFactory(long maxRequestSize,
                                  Ortb2RequestFactory ortb2RequestFactory,
                                  StoredRequestProcessor storedRequestProcessor,
+                                 BidRequestOrtbVersionConversionManager ortbVersionConversionManager,
+                                 AuctionGppService gppService,
                                  ImplicitParametersExtractor paramsExtractor,
                                  Ortb2ImplicitParametersResolver paramsResolver,
                                  InterstitialProcessor interstitialProcessor,
                                  OrtbTypesResolver ortbTypesResolver,
                                  PrivacyEnforcementService privacyEnforcementService,
-                                 TimeoutResolver timeoutResolver,
                                  DebugResolver debugResolver,
                                  JacksonMapper mapper) {
 
         this.maxRequestSize = maxRequestSize;
         this.ortb2RequestFactory = Objects.requireNonNull(ortb2RequestFactory);
         this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
+        this.ortbVersionConversionManager = Objects.requireNonNull(ortbVersionConversionManager);
+        this.gppService = Objects.requireNonNull(gppService);
         this.paramsExtractor = Objects.requireNonNull(paramsExtractor);
         this.paramsResolver = Objects.requireNonNull(paramsResolver);
         this.interstitialProcessor = Objects.requireNonNull(interstitialProcessor);
         this.ortbTypesResolver = Objects.requireNonNull(ortbTypesResolver);
         this.privacyEnforcementService = Objects.requireNonNull(privacyEnforcementService);
-        this.timeoutResolver = Objects.requireNonNull(timeoutResolver);
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.mapper = Objects.requireNonNull(mapper);
     }
@@ -84,6 +92,7 @@ public class AuctionRequestFactory {
 
         return ortb2RequestFactory.executeEntrypointHooks(routingContext, body, initialAuctionContext)
                 .compose(httpRequest -> parseBidRequest(httpRequest, initialAuctionContext.getPrebidErrors())
+
                         .map(bidRequest -> ortb2RequestFactory
                                 .enrichAuctionContext(initialAuctionContext, httpRequest, bidRequest, startTime)
                                 .with(requestTypeMetric(bidRequest))))
@@ -92,6 +101,12 @@ public class AuctionRequestFactory {
                         .map(auctionContext::with))
 
                 .map(auctionContext -> auctionContext.with(debugResolver.debugContextFrom(auctionContext)))
+
+                .compose(auctionContext -> gppService.contextFrom(auctionContext)
+                        .map(auctionContext::with))
+
+                .compose(auctionContext -> ortb2RequestFactory.activityInfrastructureFrom(auctionContext)
+                        .map(auctionContext::with))
 
                 .compose(auctionContext -> ortb2RequestFactory.executeRawAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
@@ -108,7 +123,11 @@ public class AuctionRequestFactory {
                 .compose(auctionContext -> ortb2RequestFactory.executeProcessedAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
 
-                .compose(ortb2RequestFactory::populateDealsInfo)
+                .compose(ortb2RequestFactory::populateUserAdditionalInfo)
+
+                .map(ortb2RequestFactory::enrichWithPriceFloors)
+
+                .map(auctionContext -> ortb2RequestFactory.updateTimeout(auctionContext, startTime))
 
                 .recover(ortb2RequestFactory::restoreResultFromRejection);
     }
@@ -120,8 +139,7 @@ public class AuctionRequestFactory {
         }
 
         if (body.length() > maxRequestSize) {
-            throw new InvalidRequestException(
-                    String.format("Request size exceeded max size of %d bytes.", maxRequestSize));
+            throw new InvalidRequestException("Request size exceeded max size of %d bytes.".formatted(maxRequestSize));
         }
 
         return body;
@@ -134,7 +152,8 @@ public class AuctionRequestFactory {
             final String referer = paramsExtractor.refererFrom(httpRequest);
             ortbTypesResolver.normalizeBidRequest(bidRequestNode, errors, referer);
 
-            return Future.succeededFuture(jsonNodeAsBidRequest(bidRequestNode));
+            return Future.succeededFuture(jsonNodeAsBidRequest(bidRequestNode))
+                    .map(bidRequest -> fillWithValuesFromHttpRequest(bidRequest, httpRequest));
         } catch (Exception e) {
             return Future.failedFuture(e);
         }
@@ -144,7 +163,7 @@ public class AuctionRequestFactory {
         try {
             return mapper.mapper().readTree(body);
         } catch (IOException e) {
-            throw new InvalidRequestException(String.format("Error decoding bidRequest: %s", e.getMessage()));
+            throw new InvalidRequestException("Error decoding bidRequest: " + e.getMessage());
         }
     }
 
@@ -152,8 +171,39 @@ public class AuctionRequestFactory {
         try {
             return mapper.mapper().treeToValue(bidRequestNode, BidRequest.class);
         } catch (JsonProcessingException e) {
-            throw new InvalidRequestException(String.format("Error decoding bidRequest: %s", e.getMessage()));
+            throw new InvalidRequestException("Error decoding bidRequest: " + e.getMessage());
         }
+    }
+
+    private BidRequest fillWithValuesFromHttpRequest(BidRequest bidRequest, HttpRequestContext httpRequest) {
+        return !containsRegsExtGpc(bidRequest)
+                ? bidRequest.toBuilder()
+                .regs(fillRegsWithValuesFromHttpRequest(bidRequest.getRegs(), httpRequest))
+                .build()
+                : bidRequest;
+    }
+
+    private boolean containsRegsExtGpc(BidRequest bidRequest) {
+        return Optional.ofNullable(bidRequest.getRegs())
+                .map(Regs::getExt)
+                .map(ExtRegs::getGpc)
+                .isPresent();
+    }
+
+    private Regs fillRegsWithValuesFromHttpRequest(Regs regs, HttpRequestContext httpRequest) {
+        final String gpc = paramsExtractor.gpcFrom(httpRequest);
+        if (gpc == null) {
+            return regs;
+        }
+
+        final ExtRegs extRegs = regs != null ? regs.getExt() : null;
+        return (regs != null ? regs.toBuilder() : Regs.builder())
+                .ext(ExtRegs.of(
+                        extRegs != null ? extRegs.getGdpr() : null,
+                        extRegs != null ? extRegs.getUsPrivacy() : null,
+                        gpc,
+                        extRegs != null ? extRegs.getDsa() : null))
+                .build();
     }
 
     /**
@@ -162,20 +212,36 @@ public class AuctionRequestFactory {
      */
     private Future<BidRequest> updateAndValidateBidRequest(AuctionContext auctionContext) {
         final Account account = auctionContext.getAccount();
-        final BidRequest bidRequest = auctionContext.getBidRequest();
-        final HttpRequestContext httpRequest = auctionContext.getHttpRequest();
+        final List<String> debugWarnings = auctionContext.getDebugWarnings();
 
-        return storedRequestProcessor.processStoredRequests(account.getId(), bidRequest)
-                .map(resolvedBidRequest ->
-                        paramsResolver.resolve(resolvedBidRequest, httpRequest, timeoutResolver, ENDPOINT))
-
-                .compose(resolvedBidRequest ->
-                        ortb2RequestFactory.validateRequest(resolvedBidRequest, auctionContext.getDebugWarnings()))
-
+        return storedRequestProcessor.processAuctionRequest(account.getId(), auctionContext.getBidRequest())
+                .compose(auctionStoredResult -> updateBidRequest(auctionStoredResult, auctionContext))
+                .compose(bidRequest -> ortb2RequestFactory.validateRequest(
+                        bidRequest,
+                        auctionContext.getHttpRequest(),
+                        debugWarnings))
                 .map(interstitialProcessor::process);
     }
 
+    private Future<BidRequest> updateBidRequest(AuctionStoredResult auctionStoredResult,
+                                                AuctionContext auctionContext) {
+
+        final boolean hasStoredBidRequest = auctionStoredResult.hasStoredBidRequest();
+
+        return Future.succeededFuture(auctionStoredResult.bidRequest())
+                .map(ortbVersionConversionManager::convertToAuctionSupportedVersion)
+                .map(bidRequest -> gppService.updateBidRequest(bidRequest, auctionContext))
+                .map(bidRequest -> paramsResolver.resolve(
+                        bidRequest, auctionContext.getHttpRequest(), ENDPOINT, hasStoredBidRequest));
+    }
+
     private static MetricName requestTypeMetric(BidRequest bidRequest) {
-        return bidRequest.getApp() != null ? MetricName.openrtb2app : MetricName.openrtb2web;
+        if (bidRequest.getApp() != null) {
+            return MetricName.openrtb2app;
+        } else if (bidRequest.getDooh() != null) {
+            return MetricName.openrtb2dooh;
+        } else {
+            return MetricName.openrtb2web;
+        }
     }
 }
