@@ -3,8 +3,10 @@ package org.prebid.server.auction.requestfactory;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Device;
+import com.iab.openrtb.request.Dooh;
 import com.iab.openrtb.request.Geo;
 import com.iab.openrtb.request.Publisher;
+import com.iab.openrtb.request.Regs;
 import com.iab.openrtb.request.Site;
 import io.vertx.core.Future;
 import io.vertx.core.MultiMap;
@@ -12,16 +14,19 @@ import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
 import io.vertx.ext.web.RoutingContext;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.prebid.server.activity.infrastructure.ActivityInfrastructure;
+import org.prebid.server.activity.infrastructure.creator.ActivityInfrastructureCreator;
 import org.prebid.server.auction.IpAddressHelper;
 import org.prebid.server.auction.StoredRequestProcessor;
 import org.prebid.server.auction.TimeoutResolver;
 import org.prebid.server.auction.model.AuctionContext;
-import org.prebid.server.auction.model.DebugContext;
 import org.prebid.server.auction.model.IpAddress;
+import org.prebid.server.auction.model.debug.DebugContext;
 import org.prebid.server.cookie.UidsCookieService;
-import org.prebid.server.deals.DealsPopulator;
+import org.prebid.server.deals.UserAdditionalInfoService;
 import org.prebid.server.deals.model.DeepDebugLog;
 import org.prebid.server.deals.model.TxnLog;
 import org.prebid.server.exception.BlacklistedAccountException;
@@ -30,6 +35,7 @@ import org.prebid.server.exception.PreBidException;
 import org.prebid.server.exception.UnauthorizedAccountException;
 import org.prebid.server.execution.Timeout;
 import org.prebid.server.execution.TimeoutFactory;
+import org.prebid.server.floors.PriceFloorProcessor;
 import org.prebid.server.geolocation.CountryCodeMapper;
 import org.prebid.server.geolocation.model.GeoInfo;
 import org.prebid.server.hooks.execution.HookStageExecutor;
@@ -39,19 +45,30 @@ import org.prebid.server.hooks.v1.auction.AuctionRequestPayload;
 import org.prebid.server.hooks.v1.entrypoint.EntrypointPayload;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.metric.MetricName;
+import org.prebid.server.metric.Metrics;
 import org.prebid.server.model.CaseInsensitiveMultiMap;
 import org.prebid.server.model.Endpoint;
 import org.prebid.server.model.HttpRequestContext;
+import org.prebid.server.model.UpdateResult;
 import org.prebid.server.privacy.model.PrivacyContext;
+import org.prebid.server.proto.openrtb.ext.FlexibleExtension;
 import org.prebid.server.proto.openrtb.ext.request.ExtPublisher;
 import org.prebid.server.proto.openrtb.ext.request.ExtPublisherPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegsDsa;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegsDsaTransparency;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ExtRequestTargeting;
 import org.prebid.server.proto.openrtb.ext.request.TraceLevel;
 import org.prebid.server.settings.ApplicationSettings;
 import org.prebid.server.settings.model.Account;
 import org.prebid.server.settings.model.AccountAuctionConfig;
+import org.prebid.server.settings.model.AccountDsaConfig;
+import org.prebid.server.settings.model.AccountPrivacyConfig;
 import org.prebid.server.settings.model.AccountStatus;
+import org.prebid.server.settings.model.AccountTargetingConfig;
+import org.prebid.server.settings.model.DefaultDsa;
 import org.prebid.server.util.HttpUtil;
 import org.prebid.server.util.ObjectUtil;
 import org.prebid.server.validation.RequestValidator;
@@ -62,6 +79,9 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.TreeMap;
+import java.util.function.Function;
 
 public class Ortb2RequestFactory {
 
@@ -71,22 +91,28 @@ public class Ortb2RequestFactory {
     private static final ConditionalLogger UNKNOWN_ACCOUNT_LOGGER = new ConditionalLogger("unknown_account", logger);
 
     private final boolean enforceValidAccount;
+    private final double logSamplingRate;
     private final List<String> blacklistedAccounts;
     private final UidsCookieService uidsCookieService;
+    private final ActivityInfrastructureCreator activityInfrastructureCreator;
     private final RequestValidator requestValidator;
     private final TimeoutResolver timeoutResolver;
     private final TimeoutFactory timeoutFactory;
     private final StoredRequestProcessor storedRequestProcessor;
     private final ApplicationSettings applicationSettings;
-    private final DealsPopulator dealsPopulator;
+    private final UserAdditionalInfoService userAdditionalInfoService;
     private final IpAddressHelper ipAddressHelper;
     private final HookStageExecutor hookStageExecutor;
+    private final PriceFloorProcessor priceFloorProcessor;
     private final CountryCodeMapper countryCodeMapper;
+    private final Metrics metrics;
     private final Clock clock;
 
     public Ortb2RequestFactory(boolean enforceValidAccount,
+                               double logSamplingRate,
                                List<String> blacklistedAccounts,
                                UidsCookieService uidsCookieService,
+                               ActivityInfrastructureCreator activityInfrastructureCreator,
                                RequestValidator requestValidator,
                                TimeoutResolver timeoutResolver,
                                TimeoutFactory timeoutFactory,
@@ -94,13 +120,17 @@ public class Ortb2RequestFactory {
                                ApplicationSettings applicationSettings,
                                IpAddressHelper ipAddressHelper,
                                HookStageExecutor hookStageExecutor,
-                               DealsPopulator dealsPopulator,
+                               UserAdditionalInfoService userAdditionalInfoService,
+                               PriceFloorProcessor priceFloorProcessor,
                                CountryCodeMapper countryCodeMapper,
+                               Metrics metrics,
                                Clock clock) {
 
         this.enforceValidAccount = enforceValidAccount;
+        this.logSamplingRate = logSamplingRate;
         this.blacklistedAccounts = Objects.requireNonNull(blacklistedAccounts);
         this.uidsCookieService = Objects.requireNonNull(uidsCookieService);
+        this.activityInfrastructureCreator = Objects.requireNonNull(activityInfrastructureCreator);
         this.requestValidator = Objects.requireNonNull(requestValidator);
         this.timeoutResolver = Objects.requireNonNull(timeoutResolver);
         this.timeoutFactory = Objects.requireNonNull(timeoutFactory);
@@ -108,8 +138,10 @@ public class Ortb2RequestFactory {
         this.applicationSettings = Objects.requireNonNull(applicationSettings);
         this.ipAddressHelper = Objects.requireNonNull(ipAddressHelper);
         this.hookStageExecutor = Objects.requireNonNull(hookStageExecutor);
-        this.dealsPopulator = dealsPopulator;
+        this.userAdditionalInfoService = userAdditionalInfoService;
+        this.priceFloorProcessor = Objects.requireNonNull(priceFloorProcessor);
         this.countryCodeMapper = Objects.requireNonNull(countryCodeMapper);
+        this.metrics = Objects.requireNonNull(metrics);
         this.clock = Objects.requireNonNull(clock);
     }
 
@@ -123,6 +155,7 @@ public class Ortb2RequestFactory {
                 .requestRejected(false)
                 .txnLog(TxnLog.create())
                 .debugHttpCalls(new HashMap<>())
+                .bidRejectionTrackers(new TreeMap<>(String.CASE_INSENSITIVE_ORDER))
                 .build();
     }
 
@@ -135,6 +168,7 @@ public class Ortb2RequestFactory {
                 .httpRequest(httpRequest)
                 .uidsCookie(uidsCookieService.parseFromRequest(httpRequest))
                 .bidRequest(bidRequest)
+                .startTime(startTime)
                 .timeout(timeout(bidRequest, startTime))
                 .deepDebugLog(createDeepDebugLog(bidRequest))
                 .build();
@@ -158,8 +192,18 @@ public class Ortb2RequestFactory {
                 .compose(accountId -> loadAccount(timeout, httpRequest, accountId));
     }
 
-    public Future<BidRequest> validateRequest(BidRequest bidRequest, List<String> warnings) {
-        final ValidationResult validationResult = requestValidator.validate(bidRequest);
+    public Future<ActivityInfrastructure> activityInfrastructureFrom(AuctionContext auctionContext) {
+        return Future.succeededFuture(activityInfrastructureCreator.create(
+                auctionContext.getAccount(),
+                auctionContext.getGppContext(),
+                auctionContext.getDebugContext().getTraceLevel()));
+    }
+
+    public Future<BidRequest> validateRequest(BidRequest bidRequest,
+                                              HttpRequestContext httpRequestContext,
+                                              List<String> warnings) {
+
+        final ValidationResult validationResult = requestValidator.validate(bidRequest, httpRequestContext);
 
         if (validationResult.hasWarnings()) {
             warnings.addAll(validationResult.getWarnings());
@@ -181,14 +225,67 @@ public class Ortb2RequestFactory {
         final Device device = bidRequest.getDevice();
         final Device enrichedDevice = enrichDevice(device, privacyContext);
 
-        if (enrichedRequestExt != null || enrichedDevice != null) {
+        final Regs regs = bidRequest.getRegs();
+        final Regs enrichedRegs = enrichRegs(regs, privacyContext, account);
+
+        if (enrichedRequestExt != null || enrichedDevice != null || enrichedRegs != null) {
             return bidRequest.toBuilder()
                     .ext(ObjectUtils.defaultIfNull(enrichedRequestExt, requestExt))
                     .device(ObjectUtils.defaultIfNull(enrichedDevice, device))
+                    .regs(ObjectUtils.defaultIfNull(enrichedRegs, regs))
                     .build();
         }
 
         return bidRequest;
+    }
+
+    private static Regs enrichRegs(Regs regs, PrivacyContext privacyContext, Account account) {
+        final ExtRegs regsExt = regs != null ? regs.getExt() : null;
+        final ExtRegsDsa regsExtDsa = regsExt != null ? regsExt.getDsa() : null;
+        if (regsExtDsa != null) {
+            return null;
+        }
+
+        final AccountDsaConfig accountDsaConfig = Optional.ofNullable(account)
+                .map(Account::getPrivacy)
+                .map(AccountPrivacyConfig::getDsa)
+                .orElse(null);
+        final DefaultDsa defaultDsa = accountDsaConfig != null ? accountDsaConfig.getDefaultDsa() : null;
+        if (defaultDsa == null) {
+            return null;
+        }
+
+        final boolean isGdprOnly = BooleanUtils.isTrue(accountDsaConfig.getGdprOnly());
+        if (isGdprOnly && !privacyContext.getTcfContext().isInGdprScope()) {
+            return null;
+        }
+
+        return Optional.ofNullable(regs)
+                .map(Regs::toBuilder)
+                .orElseGet(Regs::builder)
+                .ext(mapRegsExtDsa(defaultDsa, regsExt))
+                .build();
+    }
+
+    private static ExtRegs mapRegsExtDsa(DefaultDsa defaultDsa, ExtRegs regsExt) {
+        final List<ExtRegsDsaTransparency> enrichedDsaTransparencies = defaultDsa.getTransparency()
+                .stream()
+                .map(dsaTransparency -> ExtRegsDsaTransparency.of(
+                        dsaTransparency.getDomain(), dsaTransparency.getDsaParams()))
+                .toList();
+
+        final ExtRegsDsa enrichedRegsExtDsa = ExtRegsDsa.of(
+                defaultDsa.getDsaRequired(),
+                defaultDsa.getPubRender(),
+                defaultDsa.getDataToPub(),
+                enrichedDsaTransparencies);
+
+        final boolean isRegsExtPresent = regsExt != null;
+        return ExtRegs.of(
+                isRegsExtPresent ? regsExt.getGdpr() : null,
+                isRegsExtPresent ? regsExt.getUsPrivacy() : null,
+                isRegsExtPresent ? regsExt.getGpc() : null,
+                enrichedRegsExtDsa);
     }
 
     public Future<HttpRequestContext> executeEntrypointHooks(RoutingContext routingContext,
@@ -196,10 +293,10 @@ public class Ortb2RequestFactory {
                                                              AuctionContext auctionContext) {
 
         return hookStageExecutor.executeEntrypointStage(
-                toCaseInsensitiveMultiMap(routingContext.queryParams()),
-                toCaseInsensitiveMultiMap(routingContext.request().headers()),
-                body,
-                auctionContext.getHookExecutionContext())
+                        toCaseInsensitiveMultiMap(routingContext.queryParams()),
+                        toCaseInsensitiveMultiMap(routingContext.request().headers()),
+                        body,
+                        auctionContext.getHookExecutionContext())
                 .map(stageResult -> toHttpRequest(stageResult, routingContext, auctionContext));
     }
 
@@ -251,18 +348,53 @@ public class Ortb2RequestFactory {
         return stageResult.getPayload().bidRequest();
     }
 
-    public Future<AuctionContext> populateDealsInfo(AuctionContext auctionContext) {
-        return dealsPopulator != null
-                ? dealsPopulator.populate(auctionContext)
+    public Future<AuctionContext> populateUserAdditionalInfo(AuctionContext auctionContext) {
+        return userAdditionalInfoService != null
+                ? userAdditionalInfoService.populate(auctionContext)
                 : Future.succeededFuture(auctionContext);
+    }
+
+    public AuctionContext enrichWithPriceFloors(AuctionContext auctionContext) {
+        return priceFloorProcessor.enrichWithPriceFloors(auctionContext);
+    }
+
+    public AuctionContext updateTimeout(AuctionContext auctionContext, long startTime) {
+        final Timeout currentTimeout = auctionContext.getTimeout();
+
+        final BidRequest bidRequest = auctionContext.getBidRequest();
+        final BidRequest resolvedBidRequest = resolveBidRequest(bidRequest);
+        final BidRequest effectiveBidRequest = resolvedBidRequest != null
+                ? resolvedBidRequest
+                : bidRequest;
+
+        final Timeout requestTimeout = timeoutFactory.create(startTime, effectiveBidRequest.getTmax());
+        if (requestTimeout.getDeadline() == currentTimeout.getDeadline()) {
+            return resolvedBidRequest != null
+                    ? auctionContext.with(resolvedBidRequest)
+                    : auctionContext;
+        }
+
+        return auctionContext.toBuilder()
+                .bidRequest(effectiveBidRequest)
+                .timeout(requestTimeout)
+                .build();
+    }
+
+    private BidRequest resolveBidRequest(BidRequest bidRequest) {
+        final Long resolvedTmax = resolveTmax(bidRequest.getTmax());
+        return resolvedTmax != null ? bidRequest.toBuilder().tmax(resolvedTmax).build() : null;
+    }
+
+    private Long resolveTmax(Long requestTimeout) {
+        final long timeout = timeoutResolver.limitToMax(requestTimeout);
+        return !Objects.equals(requestTimeout, timeout) ? timeout : null;
     }
 
     /**
      * Returns {@link Timeout} based on request.tmax and adjustment value of {@link TimeoutResolver}.
      */
     private Timeout timeout(BidRequest bidRequest, long startTime) {
-        final long resolvedRequestTimeout = timeoutResolver.resolve(bidRequest.getTmax());
-        final long timeout = timeoutResolver.adjustTimeout(resolvedRequestTimeout);
+        final long timeout = timeoutResolver.limitToMax(bidRequest.getTmax());
         return timeoutFactory.create(startTime, timeout);
     }
 
@@ -270,8 +402,8 @@ public class Ortb2RequestFactory {
         final String accountId = accountIdFrom(bidRequest);
         return StringUtils.isNotBlank(accountId) || !isLookupStoredRequest
                 ? Future.succeededFuture(accountId)
-                : storedRequestProcessor.processStoredRequests(accountId, bidRequest)
-                .map(this::accountIdFrom);
+                : storedRequestProcessor.processAuctionRequest(accountId, bidRequest)
+                .map(storedAuctionResult -> accountIdFrom(storedAuctionResult.bidRequest()));
     }
 
     private String validateIfAccountBlacklisted(String accountId) {
@@ -280,8 +412,8 @@ public class Ortb2RequestFactory {
                 && blacklistedAccounts.contains(accountId)) {
 
             throw new BlacklistedAccountException(
-                    String.format("Prebid-server has blacklisted Account ID: %s, please "
-                            + "reach out to the prebid server host.", accountId));
+                    "Prebid-server has blacklisted Account ID: %s, please reach out to the prebid server host."
+                            .formatted(accountId));
         }
         return accountId;
     }
@@ -289,11 +421,15 @@ public class Ortb2RequestFactory {
     private Future<Account> loadAccount(Timeout timeout,
                                         HttpRequestContext httpRequest,
                                         String accountId) {
-        return StringUtils.isBlank(accountId)
+
+        final Future<Account> accountFuture = StringUtils.isBlank(accountId)
                 ? responseForEmptyAccount(httpRequest)
                 : applicationSettings.getAccountById(accountId, timeout)
                 .compose(this::ensureAccountActive,
                         exception -> accountFallback(exception, accountId, httpRequest));
+
+        return accountFuture
+                .onFailure(ignored -> metrics.updateAccountRequestRejectedByInvalidAccountMetrics(accountId));
     }
 
     /**
@@ -305,8 +441,10 @@ public class Ortb2RequestFactory {
         final Publisher appPublisher = app != null ? app.getPublisher() : null;
         final Site site = bidRequest.getSite();
         final Publisher sitePublisher = site != null ? site.getPublisher() : null;
+        final Dooh dooh = bidRequest.getDooh();
+        final Publisher doohPublisher = dooh != null ? dooh.getPublisher() : null;
 
-        final Publisher publisher = ObjectUtils.defaultIfNull(appPublisher, sitePublisher);
+        final Publisher publisher = ObjectUtils.firstNonNull(appPublisher, doohPublisher, sitePublisher);
         final String publisherId = publisher != null ? resolvePublisherId(publisher) : null;
         return ObjectUtils.defaultIfNull(publisherId, StringUtils.EMPTY);
     }
@@ -329,13 +467,12 @@ public class Ortb2RequestFactory {
     }
 
     private Future<Account> responseForEmptyAccount(HttpRequestContext httpRequest) {
-        EMPTY_ACCOUNT_LOGGER.warn(accountErrorMessage("Account not specified", httpRequest), 100);
+        EMPTY_ACCOUNT_LOGGER.warn(accountErrorMessage("Account not specified", httpRequest), logSamplingRate);
         return responseForUnknownAccount(StringUtils.EMPTY);
     }
 
     private static String accountErrorMessage(String message, HttpRequestContext httpRequest) {
-        return String.format(
-                "%s, Url: %s and Referer: %s",
+        return "%s, Url: %s and Referer: %s".formatted(
                 message,
                 httpRequest.getAbsoluteUri(),
                 httpRequest.getHeaders().get(HttpUtil.REFERER_HEADER));
@@ -348,6 +485,7 @@ public class Ortb2RequestFactory {
         if (exception instanceof PreBidException) {
             UNKNOWN_ACCOUNT_LOGGER.warn(accountErrorMessage(exception.getMessage(), httpRequest), 100);
         } else {
+            metrics.updateAccountRequestRejectedByFailedFetch(accountId);
             logger.warn("Error occurred while fetching account: {0}", exception.getMessage());
             logger.debug("Error occurred while fetching account", exception);
         }
@@ -359,7 +497,7 @@ public class Ortb2RequestFactory {
     private Future<Account> responseForUnknownAccount(String accountId) {
         return enforceValidAccount
                 ? Future.failedFuture(new UnauthorizedAccountException(
-                String.format("Unauthorized account id: %s", accountId), accountId))
+                "Unauthorized account id: " + accountId, accountId))
                 : Future.succeededFuture(Account.empty(accountId));
     }
 
@@ -368,30 +506,90 @@ public class Ortb2RequestFactory {
 
         return account.getStatus() == AccountStatus.inactive
                 ? Future.failedFuture(new UnauthorizedAccountException(
-                String.format("Account %s is inactive", accountId), accountId))
+                "Account %s is inactive".formatted(accountId), accountId))
                 : Future.succeededFuture(account);
     }
 
     private ExtRequest enrichExtRequest(ExtRequest ext, Account account) {
-        final ExtRequestPrebid prebidExt = ObjectUtil.getIfNotNull(ext, ExtRequest::getPrebid);
-        final String integration = ObjectUtil.getIfNotNull(prebidExt, ExtRequestPrebid::getIntegration);
-        final String accountDefaultIntegration = accountDefaultIntegration(account);
-
-        if (StringUtils.isBlank(integration) && StringUtils.isNotBlank(accountDefaultIntegration)) {
-            final ExtRequestPrebid.ExtRequestPrebidBuilder prebidExtBuilder =
-                    prebidExt != null ? prebidExt.toBuilder() : ExtRequestPrebid.builder();
-
-            prebidExtBuilder.integration(accountDefaultIntegration);
-
-            final ExtRequest updatedExt = ExtRequest.of(prebidExtBuilder.build());
-            if (ext != null) {
-                updatedExt.addProperties(ext.getProperties());
-            }
-
-            return updatedExt;
+        final AccountAuctionConfig accountAuctionConfig = account.getAuction();
+        if (accountAuctionConfig == null) {
+            return null;
         }
 
-        return null;
+        final ExtRequestPrebid extPrebid = ext != null ? ext.getPrebid() : null;
+        final UpdateResult<String> integration = resolveIntegration(extPrebid, accountAuctionConfig);
+        final UpdateResult<ExtRequestTargeting> targeting = resolveExtPrebidTargeting(extPrebid, accountAuctionConfig);
+
+        if (!integration.isUpdated() && !targeting.isUpdated()) {
+            return null;
+        }
+
+        final ExtRequestPrebid updatedExtPrebid = Optional.ofNullable(extPrebid)
+                .map(ExtRequestPrebid::toBuilder)
+                .orElseGet(ExtRequestPrebid::builder)
+                .integration(integration.getValue())
+                .targeting(targeting.getValue())
+                .build();
+
+        final ExtRequest updatedExt = ExtRequest.of(updatedExtPrebid);
+        Optional.ofNullable(ext)
+                .map(FlexibleExtension::getProperties)
+                .ifPresent(updatedExt::addProperties);
+
+        return updatedExt;
+    }
+
+    private static UpdateResult<String> resolveIntegration(ExtRequestPrebid extPrebid,
+                                                           AccountAuctionConfig accountAuctionConfig) {
+
+        final String integration = extPrebid != null ? extPrebid.getIntegration() : null;
+        if (StringUtils.isNotBlank(integration)) {
+            return UpdateResult.unaltered(integration);
+        }
+
+        final String accountIntegration = accountAuctionConfig.getDefaultIntegration();
+        return StringUtils.isNotBlank(accountIntegration)
+                ? UpdateResult.updated(accountIntegration)
+                : UpdateResult.unaltered(integration);
+    }
+
+    private static UpdateResult<ExtRequestTargeting> resolveExtPrebidTargeting(
+            ExtRequestPrebid extPrebid,
+            AccountAuctionConfig accountAuctionConfig) {
+
+        final ExtRequestTargeting targeting = extPrebid != null ? extPrebid.getTargeting() : null;
+
+        final AccountTargetingConfig accountTargeting = accountAuctionConfig.getTargeting();
+        if (accountTargeting == null) {
+            return UpdateResult.unaltered(targeting);
+        }
+
+        final TargetingValueResolver targetingValueResolver = new TargetingValueResolver(targeting, accountTargeting);
+
+        final UpdateResult<Boolean> includeWinners = targetingValueResolver.resolveIncludeWinners();
+        final UpdateResult<Boolean> includeBidderKeys = targetingValueResolver.resolveIncludeBidderKeys();
+        final UpdateResult<Boolean> includeFormat = targetingValueResolver.resolveIncludeFormat();
+        final UpdateResult<Boolean> preferDeals = targetingValueResolver.resolvePreferDeals();
+        final UpdateResult<Boolean> alwaysIncludeDeals = targetingValueResolver.resolveAlwaysIncludeDeals();
+
+        return includeWinners.isUpdated()
+                || includeBidderKeys.isUpdated()
+                || includeFormat.isUpdated()
+                || preferDeals.isUpdated()
+                || alwaysIncludeDeals.isUpdated()
+
+                ? UpdateResult.updated(
+                Optional.ofNullable(targeting)
+                        .map(ExtRequestTargeting::toBuilder)
+                        .orElseGet(ExtRequestTargeting::builder)
+                        .includewinners(includeWinners.getValue())
+                        .includebidderkeys(includeBidderKeys.getValue())
+                        .includeformat(includeFormat.getValue())
+                        .preferdeals(preferDeals.getValue())
+                        .alwaysincludedeals(alwaysIncludeDeals.getValue())
+                        .build())
+
+                : UpdateResult.unaltered(targeting);
     }
 
     private Device enrichDevice(Device device, PrivacyContext privacyContext) {
@@ -407,11 +605,11 @@ public class Ortb2RequestFactory {
         final boolean shouldUpdateIpV6 = ipV6 != null && !Objects.equals(ipV6InRequest, ipV6);
 
         final Geo geo = ObjectUtil.getIfNotNull(device, Device::getGeo);
-        final String countryInRequest = ObjectUtil.getIfNotNull(geo, Geo::getCountry);
-        final String alpha3CountryCode = resolveAlpha3CountryCode(privacyContext);
-        final boolean shouldUpdateCountry = alpha3CountryCode != null && !alpha3CountryCode.equals(countryInRequest);
 
-        if (shouldUpdateIpV4 || shouldUpdateIpV6 || shouldUpdateCountry) {
+        final UpdateResult<String> resolvedCountry = resolveCountry(geo, privacyContext);
+        final UpdateResult<String> resolvedRegion = resolveRegion(geo, privacyContext);
+
+        if (shouldUpdateIpV4 || shouldUpdateIpV6 || resolvedCountry.isUpdated() || resolvedRegion.isUpdated()) {
             final Device.DeviceBuilder deviceBuilder = device != null ? device.toBuilder() : Device.builder();
 
             if (shouldUpdateIpV4) {
@@ -422,10 +620,15 @@ public class Ortb2RequestFactory {
                 deviceBuilder.ipv6(ipV6);
             }
 
-            if (shouldUpdateCountry) {
-                final Geo.GeoBuilder geoBuilder = geo != null ? geo.toBuilder() : Geo.builder();
-                geoBuilder.country(alpha3CountryCode);
-                deviceBuilder.geo(geoBuilder.build());
+            if (resolvedCountry.isUpdated() || resolvedRegion.isUpdated()) {
+                final Geo updatedGeo = Optional.ofNullable(geo)
+                        .map(Geo::toBuilder)
+                        .orElseGet(Geo::builder)
+                        .country(resolvedCountry.getValue())
+                        .region(resolvedRegion.getValue())
+                        .build();
+
+                deviceBuilder.geo(updatedGeo);
             }
 
             return deviceBuilder.build();
@@ -434,17 +637,31 @@ public class Ortb2RequestFactory {
         return null;
     }
 
-    private String resolveAlpha3CountryCode(PrivacyContext privacyContext) {
-        final String alpha2CountryCode = ObjectUtil.getIfNotNull(
-                privacyContext.getTcfContext().getGeoInfo(), GeoInfo::getCountry);
+    private UpdateResult<String> resolveCountry(Geo geo, PrivacyContext privacyContext) {
+        final String countryInRequest = geo != null ? geo.getCountry() : null;
 
-        return countryCodeMapper.mapToAlpha3(alpha2CountryCode);
+        final GeoInfo geoInfo = privacyContext.getTcfContext().getGeoInfo();
+        final String alpha2CountryCode = geoInfo != null ? geoInfo.getCountry() : null;
+        final String alpha3CountryCode = countryCodeMapper.mapToAlpha3(alpha2CountryCode);
+
+        return alpha3CountryCode != null && !alpha3CountryCode.equals(countryInRequest)
+                ? UpdateResult.updated(alpha3CountryCode)
+                : UpdateResult.unaltered(countryInRequest);
     }
 
-    private static String accountDefaultIntegration(Account account) {
-        final AccountAuctionConfig accountAuctionConfig = account.getAuction();
+    private static UpdateResult<String> resolveRegion(Geo geo, PrivacyContext privacyContext) {
+        final String regionInRequest = geo != null ? geo.getRegion() : null;
+        final String upperCasedRegionInRequest = StringUtils.upperCase(regionInRequest);
 
-        return accountAuctionConfig != null ? accountAuctionConfig.getDefaultIntegration() : null;
+        final GeoInfo geoInfo = privacyContext.getTcfContext().getGeoInfo();
+        final String region = geoInfo != null ? geoInfo.getRegion() : null;
+        final String upperCasedRegion = StringUtils.upperCase(region);
+
+        return upperCasedRegion != null && !upperCasedRegion.equals(upperCasedRegionInRequest)
+                ? UpdateResult.updated(upperCasedRegion)
+                : Objects.equals(regionInRequest, upperCasedRegionInRequest)
+                ? UpdateResult.unaltered(regionInRequest)
+                : UpdateResult.updated(upperCasedRegionInRequest);
     }
 
     private static CaseInsensitiveMultiMap toCaseInsensitiveMultiMap(MultiMap originalMap) {
@@ -477,6 +694,52 @@ public class Ortb2RequestFactory {
 
         public AuctionContext getAuctionContext() {
             return auctionContext;
+        }
+    }
+
+    private record TargetingValueResolver(ExtRequestTargeting targeting,
+                                          AccountTargetingConfig accountTargetingConfig) {
+
+        public UpdateResult<Boolean> resolveIncludeWinners() {
+            return resolveValue(
+                    ExtRequestTargeting::getIncludewinners,
+                    AccountTargetingConfig::getIncludeWinners);
+        }
+
+        public UpdateResult<Boolean> resolveIncludeBidderKeys() {
+            return resolveValue(
+                    ExtRequestTargeting::getIncludebidderkeys,
+                    AccountTargetingConfig::getIncludeBidderKeys);
+        }
+
+        public UpdateResult<Boolean> resolveIncludeFormat() {
+            return resolveValue(
+                    ExtRequestTargeting::getIncludeformat,
+                    AccountTargetingConfig::getIncludeFormat);
+        }
+
+        public UpdateResult<Boolean> resolvePreferDeals() {
+            return resolveValue(
+                    ExtRequestTargeting::getPreferdeals,
+                    AccountTargetingConfig::getPreferDeals);
+        }
+
+        public UpdateResult<Boolean> resolveAlwaysIncludeDeals() {
+            return resolveValue(
+                    ExtRequestTargeting::getAlwaysincludedeals,
+                    AccountTargetingConfig::getAlwaysIncludeDeals);
+        }
+
+        private <T> UpdateResult<T> resolveValue(Function<ExtRequestTargeting, T> originalExtractor,
+                                                 Function<AccountTargetingConfig, T> accountExtractor) {
+
+            final T originalValue = targeting != null ? originalExtractor.apply(targeting) : null;
+            if (originalValue != null) {
+                return UpdateResult.unaltered(originalValue);
+            }
+
+            final T accountValue = accountExtractor.apply(accountTargetingConfig);
+            return accountValue != null ? UpdateResult.updated(accountValue) : UpdateResult.unaltered(null);
         }
     }
 }
