@@ -1,8 +1,11 @@
 package org.prebid.server.bidder.adnuntius;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Device;
+import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.request.Regs;
 import com.iab.openrtb.request.Site;
@@ -11,7 +14,7 @@ import com.iab.openrtb.response.Bid;
 import io.vertx.core.MultiMap;
 import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
@@ -22,15 +25,19 @@ import org.prebid.server.bidder.adnuntius.model.response.AdnuntiusAd;
 import org.prebid.server.bidder.adnuntius.model.response.AdnuntiusAdsUnit;
 import org.prebid.server.bidder.adnuntius.model.response.AdnuntiusBid;
 import org.prebid.server.bidder.adnuntius.model.response.AdnuntiusResponse;
+import org.prebid.server.bidder.adnuntius.model.response.AdnuntiusGrossBid;
+import org.prebid.server.bidder.adnuntius.model.response.AdnuntiusNetBid;
+import org.prebid.server.bidder.adnuntius.model.util.AdsUnitWithImpId;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
+import org.prebid.server.proto.openrtb.ext.FlexibleExtension;
 import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.adnuntius.ExtImpAdnuntius;
@@ -48,7 +55,9 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
 
@@ -58,6 +67,8 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
     private static final int SECONDS_IN_MINUTE = 60;
     private static final String TARGET_ID_DELIMITER = "-";
     private static final String DEFAULT_PAGE = "unknown";
+    private static final String DEFAULT_NETWORK = "default";
+    private static final String URL_NO_COOKIES_PARAMETER = "noCookies";
     private static final BigDecimal PRICE_MULTIPLIER = BigDecimal.valueOf(1000);
 
     private final String endpointUrl;
@@ -73,6 +84,7 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
     @Override
     public Result<List<HttpRequest<AdnuntiusRequest>>> makeHttpRequests(BidRequest request) {
         final Map<String, List<AdnuntiusAdUnit>> networkToAdUnits = new HashMap<>();
+        boolean noCookies = false;
 
         for (Imp imp : request.getImp()) {
             final ExtImpAdnuntius extImpAdnuntius;
@@ -83,18 +95,56 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
                 return Result.withError(BidderError.badInput(e.getMessage()));
             }
 
-            final String key = StringUtils.stripToEmpty(extImpAdnuntius.getNetwork());
-            final String auId = extImpAdnuntius.getAuId();
-            networkToAdUnits.computeIfAbsent(key, k -> new ArrayList<>())
-                    .add(AdnuntiusAdUnit.of(auId, auId + TARGET_ID_DELIMITER + imp.getId()));
+            noCookies = resolveIsNoCookies(extImpAdnuntius);
+            final String network = resolveNetwork(extImpAdnuntius);
+
+            networkToAdUnits.computeIfAbsent(network, n -> new ArrayList<>())
+                    .add(makeAdnuntiusAdUnit(imp, extImpAdnuntius));
         }
 
-        return Result.withValues(createHttpRequests(networkToAdUnits, request));
+        return Result.withValues(createHttpRequests(networkToAdUnits, request, noCookies));
+    }
+
+    private static AdnuntiusAdUnit makeAdnuntiusAdUnit(Imp imp, ExtImpAdnuntius extImpAdnuntius) {
+        final String auId = extImpAdnuntius.getAuId();
+        return AdnuntiusAdUnit.builder()
+                .auId(auId)
+                .targetId(auId + TARGET_ID_DELIMITER + imp.getId())
+                .dimensions(createDimensions(imp))
+                .maxDeals(resolveMaxDeals(extImpAdnuntius))
+                .build();
+    }
+
+    private static List<List<Integer>> createDimensions(Imp imp) {
+        final Banner banner = imp.getBanner();
+
+        if (CollectionUtils.isNotEmpty(banner.getFormat())) {
+            final List<List<Integer>> formats = new ArrayList<>();
+            for (Format format : banner.getFormat()) {
+                if (format.getW() != null && format.getH() != null) {
+                    formats.add(List.of(format.getW(), format.getH()));
+                }
+            }
+            return formats;
+        }
+
+        if (banner.getW() != null && banner.getH() != null) {
+            return Collections.singletonList(List.of(banner.getW(), banner.getH()));
+        }
+
+        return null;
+    }
+
+    private static Integer resolveMaxDeals(ExtImpAdnuntius extImpAdnuntius) {
+        if (extImpAdnuntius.getMaxDeals() != null && extImpAdnuntius.getMaxDeals() > 0) {
+            return extImpAdnuntius.getMaxDeals();
+        }
+        return null;
     }
 
     private static void validateImp(Imp imp) {
         if (imp.getBanner() == null) {
-            throw new PreBidException(String.format("Fail on Imp.Id=%s: Adnuntius supports only Banner", imp.getId()));
+            throw new PreBidException("Fail on Imp.Id=%s: Adnuntius supports only Banner".formatted(imp.getId()));
         }
     }
 
@@ -102,18 +152,32 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
         try {
             return mapper.mapper().convertValue(imp.getExt(), ADNUNTIUS_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Unmarshalling error: %s", e.getMessage()));
+            throw new PreBidException("Unmarshalling error: " + e.getMessage());
         }
     }
 
+    private static boolean resolveIsNoCookies(ExtImpAdnuntius extImpAdnuntius) {
+        return Optional.of(extImpAdnuntius)
+                .map(ExtImpAdnuntius::getNoCookies)
+                .filter(BooleanUtils::isTrue)
+                .isPresent();
+    }
+
+    private static String resolveNetwork(ExtImpAdnuntius extImpAdnuntius) {
+        return Optional.of(extImpAdnuntius)
+                .map(ExtImpAdnuntius::getNetwork)
+                .filter(StringUtils::isNoneEmpty)
+                .orElse(DEFAULT_NETWORK);
+    }
+
     private List<HttpRequest<AdnuntiusRequest>> createHttpRequests(Map<String, List<AdnuntiusAdUnit>> networkToAdUnits,
-                                                                   BidRequest request) {
+                                                                   BidRequest request, Boolean noCookies) {
 
         final List<HttpRequest<AdnuntiusRequest>> adnuntiusRequests = new ArrayList<>();
 
         final AdnuntiusMetaData metaData = createMetaData(request.getUser());
         final String page = extractPage(request.getSite());
-        final String uri = createUri(request);
+        final String uri = createUri(request, noCookies);
         final Device device = request.getDevice();
 
         for (List<AdnuntiusAdUnit> adUnits : networkToAdUnits.values()) {
@@ -133,7 +197,7 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
         return StringUtils.defaultIfBlank(ObjectUtil.getIfNotNull(site, Site::getPage), DEFAULT_PAGE);
     }
 
-    private String createUri(BidRequest bidRequest) {
+    private String createUri(BidRequest bidRequest, Boolean noCookies) {
         try {
             final URIBuilder uriBuilder = new URIBuilder(endpointUrl)
                     .addParameter("format", "json")
@@ -144,6 +208,10 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
             if (StringUtils.isNoneEmpty(gdpr, consent)) {
                 uriBuilder.addParameter("gdpr", gdpr);
                 uriBuilder.addParameter("consentString", consent);
+            }
+
+            if (noCookies || extractNoCookies(bidRequest.getDevice())) {
+                uriBuilder.addParameter(URL_NO_COOKIES_PARAMETER, "true");
             }
 
             return uriBuilder.build().toString();
@@ -163,6 +231,16 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
 
     private static String extractConsent(User user) {
         return ObjectUtil.getIfNotNull(ObjectUtil.getIfNotNull(user, User::getExt), ExtUser::getConsent);
+    }
+
+    private static Boolean extractNoCookies(Device device) {
+        return Optional.ofNullable(device)
+                .map(Device::getExt)
+                .map(FlexibleExtension::getProperties)
+                .map(properties -> properties.get(URL_NO_COOKIES_PARAMETER))
+                .filter(JsonNode::isBoolean)
+                .map(JsonNode::asBoolean)
+                .orElse(false);
     }
 
     private HttpRequest<AdnuntiusRequest> createHttpRequest(AdnuntiusRequest adnuntiusRequest, String uri,
@@ -188,30 +266,46 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<AdnuntiusRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<AdnuntiusRequest> httpCall, BidRequest bidRequest) {
         try {
             final String body = httpCall.getResponse().getBody();
-            final AdnuntiusResponse bidResponse = mapper.decodeValue(body, AdnuntiusResponse.class);
-            return Result.withValues(extractBids(bidResponse));
+            final AdnuntiusResponse adnuntiusResponse = mapper.decodeValue(body, AdnuntiusResponse.class);
+            return Result.withValues(extractBids(bidRequest, adnuntiusResponse));
         } catch (DecodeException | PreBidException e) {
             return Result.withError(BidderError.badServerResponse(e.getMessage()));
         }
     }
 
-    private static List<BidderBid> extractBids(AdnuntiusResponse bidResponse) {
-        if (bidResponse == null || CollectionUtils.isEmpty(bidResponse.getAdsUnits())) {
+    private List<BidderBid> extractBids(BidRequest bidRequest, AdnuntiusResponse adnuntiusResponse) {
+        if (adnuntiusResponse == null || CollectionUtils.isEmpty(adnuntiusResponse.getAdsUnits())) {
             return Collections.emptyList();
         }
 
-        final List<AdnuntiusAdsUnit> validAdsUnits = bidResponse.getAdsUnits().stream()
-                .filter(AdnuntiusBidder::validateAdsUnit).collect(Collectors.toList());
+        final List<AdnuntiusAdsUnit> adsUnits = adnuntiusResponse.getAdsUnits();
+        final List<Imp> imps = bidRequest.getImp();
+        if (adsUnits.size() > imps.size()) {
+            throw new PreBidException("Impressions count is less then ads units count.");
+        }
 
-        if (validAdsUnits.isEmpty()) {
+        final List<AdsUnitWithImpId> validAdsUnitToImp = IntStream.range(0, adsUnits.size())
+                .mapToObj(i -> AdsUnitWithImpId.of(adsUnits.get(i), imps.get(i), parseImpExt(imps.get(i))))
+                .filter(adsUnitWithImpId -> validateAdsUnit(adsUnitWithImpId.getAdsUnit()))
+                .toList();
+
+        if (validAdsUnitToImp.isEmpty()) {
             return Collections.emptyList();
         }
 
-        final String currency = extractCurrency(validAdsUnits);
-        return validAdsUnits.stream().map(adsUnit -> makeBid(adsUnit, currency)).collect(Collectors.toList());
+        final String currency = extractCurrency(validAdsUnitToImp);
+        final Stream<BidderBid> generalBids = validAdsUnitToImp.stream()
+                .map(adsUnitWithImpId -> makeGeneralBid(adsUnitWithImpId, currency));
+
+        final Stream<BidderBid> dealBids = validAdsUnitToImp.stream()
+                .filter(adsUnitWithImpId -> CollectionUtils.isNotEmpty(adsUnitWithImpId.getAdsUnit().getDeals()))
+                .map(adsUnitWithImpId -> makeDealsBid(adsUnitWithImpId, currency))
+                .filter(Objects::nonNull);
+
+        return Stream.concat(generalBids, dealBids).toList();
     }
 
     private static boolean validateAdsUnit(AdnuntiusAdsUnit adsUnit) {
@@ -219,49 +313,69 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
         return CollectionUtils.isNotEmpty(ads) && ads.get(0) != null;
     }
 
-    private static String extractCurrency(List<AdnuntiusAdsUnit> adsUnits) {
-        final AdnuntiusBid bid = adsUnits.get(adsUnits.size() - 1).getAds().get(0).getBid();
+    private static String extractCurrency(List<AdsUnitWithImpId> adsUnits) {
+        final AdnuntiusBid bid = adsUnits.get(adsUnits.size() - 1).getAdsUnit().getAds().get(0).getBid();
         return ObjectUtil.getIfNotNull(bid, AdnuntiusBid::getCurrency);
     }
 
-    private static BidderBid makeBid(AdnuntiusAdsUnit adsUnit, String currency) {
+    private BidderBid makeGeneralBid(AdsUnitWithImpId adsUnitWithImpId, String currency) {
+        final AdnuntiusAdsUnit adsUnit = adsUnitWithImpId.getAdsUnit();
         final AdnuntiusAd ad = adsUnit.getAds().get(0);
+        final Bid bid = createBid(adsUnit, adsUnitWithImpId.getImp(), adsUnitWithImpId.getExtImpAdnuntius(), ad);
+        return BidderBid.of(bid, BidType.banner, currency);
+    }
+
+    private BidderBid makeDealsBid(AdsUnitWithImpId adsUnitWithImpId, String currency) {
+        final AdnuntiusAdsUnit adsUnit = adsUnitWithImpId.getAdsUnit();
+        return adsUnit.getDeals().stream()
+                .map(adnuntiusAd ->
+                        createBid(adsUnit,
+                                adsUnitWithImpId.getImp(),
+                                adsUnitWithImpId.getExtImpAdnuntius(),
+                                adnuntiusAd))
+                .map(bid -> BidderBid.of(bid, BidType.banner, currency))
+                .findAny()
+                .orElse(null);
+    }
+
+    private static Bid createBid(AdnuntiusAdsUnit adsUnit, Imp imp, ExtImpAdnuntius extImpAdnuntius, AdnuntiusAd ad) {
         final String adId = ad.getAdId();
-        final Bid bid = Bid.builder()
+        return Bid.builder()
                 .id(adId)
-                .impid(extractImpId(adsUnit))
+                .impid(imp.getId())
                 .w(parseMeasure(ad.getCreativeWidth()))
                 .h(parseMeasure(ad.getCreativeHeight()))
                 .adid(adId)
                 .cid(ad.getLineItemId())
                 .crid(ad.getCreativeId())
-                .price(extractPrice(ad))
+                .price(resolvePrice(ad, extImpAdnuntius.getBidType()))
+                .dealid(ad.getDealId())
                 .adm(adsUnit.getHtml())
                 .adomain(extractDomain(ad.getDestinationUrls()))
                 .build();
-
-        return BidderBid.of(bid, BidType.banner, currency);
-    }
-
-    private static String extractImpId(AdnuntiusAdsUnit adsUnit) {
-        final String targetId = adsUnit.getTargetId();
-        final String auId = adsUnit.getAuId();
-
-        return ObjectUtils.allNotNull(targetId, auId) && targetId.startsWith(auId + TARGET_ID_DELIMITER)
-                ? targetId.substring(auId.length() + TARGET_ID_DELIMITER.length())
-                : null;
     }
 
     private static Integer parseMeasure(String measure) {
         try {
             return Integer.valueOf(measure);
         } catch (NumberFormatException e) {
-            throw new PreBidException(String.format("Value of measure: %s can not be parsed.", measure));
+            throw new PreBidException("Value of measure: %s can not be parsed.".formatted(measure));
         }
     }
 
-    private static BigDecimal extractPrice(AdnuntiusAd ad) {
-        final BigDecimal amount = ObjectUtil.getIfNotNull(ad.getBid(), AdnuntiusBid::getAmount);
+    private static BigDecimal resolvePrice(AdnuntiusAd ad, String bidType) {
+        BigDecimal amount = null;
+
+        if (StringUtils.isEmpty(bidType)) {
+            amount = ObjectUtil.getIfNotNull(ad.getBid(), AdnuntiusBid::getAmount);
+        }
+        if (StringUtils.endsWithIgnoreCase(bidType, "net")) {
+            amount = ObjectUtil.getIfNotNull(ad.getAdnuntiusNetBid(), AdnuntiusNetBid::getAmount);
+        }
+        if (StringUtils.endsWithIgnoreCase(bidType, "gross")) {
+            amount = ObjectUtil.getIfNotNull(ad.getAdnuntiusGrossBid(), AdnuntiusGrossBid::getAmount);
+        }
+
         return amount != null ? amount.multiply(PRICE_MULTIPLIER) : BigDecimal.ZERO;
     }
 
@@ -271,6 +385,6 @@ public class AdnuntiusBidder implements Bidder<AdnuntiusRequest> {
                 .map(url -> url.split("/"))
                 .filter(splintedUrl -> splintedUrl.length >= 2)
                 .map(splintedUrl -> splintedUrl[2].replaceAll("www\\.", ""))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
