@@ -1,25 +1,30 @@
 package org.prebid.server.bidder.adot;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.iab.openrtb.request.BidRequest;
+import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.adot.model.AdotBidExt;
 import org.prebid.server.bidder.adot.model.AdotExtAdot;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
+import org.prebid.server.proto.openrtb.ext.ExtPrebid;
+import org.prebid.server.proto.openrtb.ext.request.adot.ExtImpAdot;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
+import org.prebid.server.util.ObjectUtil;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -28,13 +33,16 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class AdotBidder implements Bidder<BidRequest> {
 
     private static final List<BidType> ALLOWED_BID_TYPES = Arrays.asList(BidType.banner, BidType.video,
             BidType.xNative);
     private static final String PRICE_MACRO = "${AUCTION_PRICE}";
+    private static final String PUBLISHER_MACRO = "{PUBLISHER_PATH}";
+    private static final TypeReference<ExtPrebid<?, ExtImpAdot>> ADOT_EXT_TYPE_REFERENCE =
+            new TypeReference<>() {
+            };
 
     private final String endpointUrl;
     private final JacksonMapper mapper;
@@ -48,19 +56,31 @@ public class AdotBidder implements Bidder<BidRequest> {
     public Result<List<HttpRequest<BidRequest>>> makeHttpRequests(BidRequest bidRequest) {
         final List<BidderError> errors = new ArrayList<>();
 
+        final Imp firstImp = bidRequest.getImp().get(0);
+        final String publisherPath = StringUtils.defaultString(
+                ObjectUtil.getIfNotNull(parseImpExt(firstImp), ExtImpAdot::getPublisherPath));
+
         return Result.of(Collections.singletonList(
-                        HttpRequest.<BidRequest>builder()
-                                .method(HttpMethod.POST)
-                                .uri(endpointUrl)
-                                .headers(HttpUtil.headers())
-                                .payload(bidRequest)
-                                .body(mapper.encodeToBytes(bidRequest))
-                                .build()),
+                BidderUtil.defaultRequest(bidRequest, resolveEndpointUrl(publisherPath), mapper)),
                 errors);
     }
 
+    private String resolveEndpointUrl(String publisherPath) {
+        return StringUtils.replace(endpointUrl, PUBLISHER_MACRO, publisherPath);
+    }
+
+    private ExtImpAdot parseImpExt(Imp firstImp) {
+        try {
+            final ExtPrebid<?, ExtImpAdot> extImpAdot =
+                    mapper.mapper().convertValue(firstImp.getExt(), ADOT_EXT_TYPE_REFERENCE);
+            return extImpAdot != null ? extImpAdot.getBidder() : null;
+        } catch (IllegalArgumentException e) {
+            return null;
+        }
+    }
+
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(bidResponse));
@@ -84,7 +104,7 @@ public class AdotBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .map(bid -> createBidderBid(bid, bidResponse))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderBid createBidderBid(Bid bid, BidResponse bidResponse) {
@@ -111,7 +131,7 @@ public class AdotBidder implements Bidder<BidRequest> {
                 .filter(bidType -> bidType.getName().equals(bidExtType))
                 .findFirst()
                 .orElseThrow(() -> new PreBidException(
-                        String.format("Wrong Adot bid ext in bid with id : %s", bid.getId())));
+                        "Wrong Adot bid ext in bid with id : " + bid.getId()));
     }
 
     private String parseBidExtType(Bid bid) {
@@ -126,8 +146,7 @@ public class AdotBidder implements Bidder<BidRequest> {
 
             return mediaType;
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Wrong Adot bid ext in bid with id : %s", bid.getId()));
+            throw new PreBidException("Wrong Adot bid ext in bid with id : " + bid.getId());
         }
     }
-
 }
