@@ -15,8 +15,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -25,6 +25,7 @@ import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.between.ExtImpBetween;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
@@ -32,7 +33,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class BetweenBidder implements Bidder<BidRequest> {
 
@@ -40,12 +40,15 @@ public class BetweenBidder implements Bidder<BidRequest> {
             new TypeReference<>() {
             };
     private static final String URL_HOST_MACRO = "{{Host}}";
+    private static final String PUBLISHER_ID_MACRO = "{{PublisherId}}";
 
     private final String endpointUrl;
     private final JacksonMapper mapper;
+    private final boolean endpointContainsHostMacro;
 
     public BetweenBidder(String endpointUrl, JacksonMapper mapper) {
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpointUrl));
+        this.endpointContainsHostMacro = endpointUrl.contains(URL_HOST_MACRO);
         this.mapper = Objects.requireNonNull(mapper);
     }
 
@@ -57,8 +60,8 @@ public class BetweenBidder implements Bidder<BidRequest> {
         ExtImpBetween extImpBetween = null;
         for (Imp imp : request.getImp()) {
             try {
-                validateImp(imp);
                 extImpBetween = parseImpExt(imp);
+                validateImp(imp, extImpBetween);
                 modifiedImps.add(modifyImp(imp, secure));
             } catch (PreBidException e) {
                 errors.add(BidderError.badInput(e.getMessage()));
@@ -75,7 +78,7 @@ public class BetweenBidder implements Bidder<BidRequest> {
         return site != null && StringUtils.isNotBlank(site.getPage()) && site.getPage().startsWith("https") ? 1 : 0;
     }
 
-    private static void validateImp(Imp imp) {
+    private void validateImp(Imp imp, ExtImpBetween extImp) {
         final Banner banner = imp.getBanner();
         if (imp.getBanner() == null) {
             throw new PreBidException("Request needs to include a Banner object");
@@ -85,21 +88,21 @@ public class BetweenBidder implements Bidder<BidRequest> {
                 throw new PreBidException("Need at least one size to build request");
             }
         }
+        final String missingParamErrorMessage = "required BetweenSSP parameter %s is missing in impression with id: %s";
+        if (StringUtils.isBlank(extImp.getPublisherId())) {
+            throw new PreBidException(missingParamErrorMessage.formatted("publisher_id", imp.getId()));
+        }
+        if (endpointContainsHostMacro && StringUtils.isBlank(extImp.getHost())) {
+            throw new PreBidException(missingParamErrorMessage.formatted("host", imp.getId()));
+        }
     }
 
     private ExtImpBetween parseImpExt(Imp imp) {
         final ExtImpBetween extImpBetween;
-        final String missingParamErrorMessage = "required BetweenSSP parameter %s is missing in impression with id: %s";
         try {
             extImpBetween = mapper.mapper().convertValue(imp.getExt(), BETWEEN_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Missing bidder ext in impression with id: %s", imp.getId()));
-        }
-        if (StringUtils.isBlank(extImpBetween.getHost())) {
-            throw new PreBidException(String.format(missingParamErrorMessage, "host", imp.getId()));
-        }
-        if (StringUtils.isBlank(extImpBetween.getPublisherId())) {
-            throw new PreBidException(String.format(missingParamErrorMessage, "publisher_id", imp.getId()));
+            throw new PreBidException("Missing bidder ext in impression with id: " + imp.getId());
         }
         return extImpBetween;
     }
@@ -128,8 +131,9 @@ public class BetweenBidder implements Bidder<BidRequest> {
     }
 
     private HttpRequest<BidRequest> createRequest(ExtImpBetween extImpBetween, BidRequest request, List<Imp> imps) {
-        final String url = endpointUrl.replace(URL_HOST_MACRO, extImpBetween.getHost())
-                .replace("{{PublisherId}}", HttpUtil.encodeUrl(extImpBetween.getPublisherId()));
+        final String url = endpointUrl
+                .replace(URL_HOST_MACRO, StringUtils.defaultString(extImpBetween.getHost()))
+                .replace(PUBLISHER_ID_MACRO, HttpUtil.encodeUrl(extImpBetween.getPublisherId()));
         final BidRequest outgoingRequest = request.toBuilder().imp(imps).build();
 
         return
@@ -137,6 +141,7 @@ public class BetweenBidder implements Bidder<BidRequest> {
                         .method(HttpMethod.POST)
                         .uri(url)
                         .headers(resolveHeaders(request.getDevice(), request.getSite()))
+                        .impIds(BidderUtil.impIds(outgoingRequest))
                         .payload(outgoingRequest)
                         .body(mapper.encodeToBytes(outgoingRequest))
                         .build();
@@ -161,7 +166,7 @@ public class BetweenBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(bidResponse));
@@ -184,6 +189,6 @@ public class BetweenBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, BidType.banner, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
