@@ -1,9 +1,9 @@
 package org.prebid.server.bidder.rubicon;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.IntNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.databind.node.TextNode;
 import com.iab.openrtb.request.App;
@@ -12,13 +12,18 @@ import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Content;
 import com.iab.openrtb.request.Data;
 import com.iab.openrtb.request.Device;
+import com.iab.openrtb.request.Eid;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.request.Metric;
+import com.iab.openrtb.request.Native;
 import com.iab.openrtb.request.Publisher;
+import com.iab.openrtb.request.Regs;
 import com.iab.openrtb.request.Segment;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.request.Source;
+import com.iab.openrtb.request.SupplyChain;
+import com.iab.openrtb.request.Uid;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.request.Video;
 import com.iab.openrtb.response.Bid;
@@ -27,7 +32,6 @@ import io.vertx.core.http.HttpMethod;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
 import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.math.NumberUtils;
@@ -35,9 +39,10 @@ import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.ViewabilityVendors;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
+import org.prebid.server.bidder.model.PriceFloorInfo;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconAppExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconBannerExt;
@@ -48,8 +53,11 @@ import org.prebid.server.bidder.rubicon.proto.request.RubiconExtPrebidBidders;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconExtPrebidBiddersBidder;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconExtPrebidBiddersBidderDebug;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExt;
+import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtPrebid;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRp;
+import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRpRtb;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRpTrack;
+import org.prebid.server.bidder.rubicon.proto.request.RubiconNative;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconPubExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconPubExtRp;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconSiteExt;
@@ -61,14 +69,19 @@ import org.prebid.server.bidder.rubicon.proto.request.RubiconUserExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconUserExtRp;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconVideoExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconVideoExtRp;
+import org.prebid.server.bidder.rubicon.proto.response.RubiconBid;
 import org.prebid.server.bidder.rubicon.proto.response.RubiconBidResponse;
 import org.prebid.server.bidder.rubicon.proto.response.RubiconSeatBid;
 import org.prebid.server.currency.CurrencyConversionService;
 import org.prebid.server.exception.PreBidException;
+import org.prebid.server.floors.PriceFloorResolver;
+import org.prebid.server.floors.model.PriceFloorResult;
+import org.prebid.server.floors.model.PriceFloorRules;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
+import org.prebid.server.proto.openrtb.ext.FlexibleExtension;
 import org.prebid.server.proto.openrtb.ext.request.ExtApp;
 import org.prebid.server.proto.openrtb.ext.request.ExtDeal;
 import org.prebid.server.proto.openrtb.ext.request.ExtDealLine;
@@ -76,21 +89,23 @@ import org.prebid.server.proto.openrtb.ext.request.ExtDevice;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpContext;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpContextDataAdserver;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebidFloors;
 import org.prebid.server.proto.openrtb.ext.request.ExtPublisher;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegsDsa;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidMultiBid;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
+import org.prebid.server.proto.openrtb.ext.request.ExtSource;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEid;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUid;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUidExt;
+import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtImpRubicon;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtImpRubiconDebug;
-import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtUserTpIdRubicon;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.RubiconVideoParams;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
+import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebidMeta;
 import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 import org.prebid.server.util.ObjectUtil;
@@ -109,6 +124,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Function;
@@ -124,12 +140,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String TK_XINT_QUERY_PARAMETER = "tk_xint";
     private static final String PREBID_SERVER_USER_AGENT = "prebid-server/1.0";
 
-    private static final String ADSERVER_EID = "adserver.org";
-    private static final String LIVEINTENT_EID = "liveintent.com";
-    private static final String LIVERAMP_EID = "liveramp.com";
     private static final String SOURCE_RUBICON = "rubiconproject.com";
 
     private static final String FPD_GPID_FIELD = "gpid";
+    private static final String FPD_SKADN_FIELD = "skadn";
     private static final String FPD_SECTIONCAT_FIELD = "sectioncat";
     private static final String FPD_PAGECAT_FIELD = "pagecat";
     private static final String FPD_PAGE_FIELD = "page";
@@ -142,6 +156,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String FPD_ADSERVER_NAME_GAM = "gam";
     private static final String FPD_KEYWORDS_FIELD = "keywords";
     private static final String DFP_ADUNIT_CODE_FIELD = "dfp_ad_unit_code";
+    private static final String STYPE_FIELD = "stype";
     private static final String PREBID_EXT = "prebid";
 
     private static final String PPUID_STYPE = "ppuid";
@@ -161,13 +176,13 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final TypeReference<ExtPrebid<ExtBidPrebid, ObjectNode>> EXT_PREBID_TYPE_REFERENCE =
             new TypeReference<>() {
             };
-    private static final int PORTRAIT_MOBILE_SIZE_ID = 67;
-    private static final int LANDSCAPE_MOBILE_SIZE_ID = 101;
+    private static final boolean DEFAULT_MULTIFORMAT_VALUE = false;
 
     private final String endpointUrl;
     private final Set<String> supportedVendors;
     private final boolean generateBidId;
     private final CurrencyConversionService currencyConversionService;
+    private final PriceFloorResolver floorResolver;
     private final JacksonMapper mapper;
 
     private final MultiMap headers;
@@ -178,12 +193,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
                          List<String> supportedVendors,
                          boolean generateBidId,
                          CurrencyConversionService currencyConversionService,
+                         PriceFloorResolver floorResolver,
                          JacksonMapper mapper) {
 
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpoint));
         this.supportedVendors = Set.copyOf(Objects.requireNonNull(supportedVendors));
         this.generateBidId = generateBidId;
         this.currencyConversionService = Objects.requireNonNull(currencyConversionService);
+        this.floorResolver = Objects.requireNonNull(floorResolver);
         this.mapper = Objects.requireNonNull(mapper);
 
         headers = headers(Objects.requireNonNull(xapiUsername), Objects.requireNonNull(xapiPassword));
@@ -200,21 +217,19 @@ public class RubiconBidder implements Bidder<BidRequest> {
             return Result.withErrors(errors);
         }
 
-        final Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToImpExt = parseRubiconImpExts(imps, errors);
-        final String impLanguage = firstImpExtLanguage(impToImpExt.values());
+        final Map<Imp, ExtImpRubicon> impToImpExt = parseRubiconImpExts(imps, errors);
+        final String language = firstImpExtLanguage(impToImpExt.values());
         final String uri = makeUri(bidRequest);
 
-        for (Map.Entry<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToExt : impToImpExt.entrySet()) {
+        for (Map.Entry<Imp, ExtImpRubicon> impToExt : impToImpExt.entrySet()) {
             try {
                 final Imp imp = impToExt.getKey();
-                final ExtPrebid<ExtImpPrebid, ExtImpRubicon> ext = impToExt.getValue();
-                final BidRequest singleImpRequest = createSingleRequest(
-                        imp, ext.getPrebid(), ext.getBidder(), bidRequest, impLanguage, errors);
-                if (hasDeals(imp)) {
-                    httpRequests.addAll(createDealsRequests(singleImpRequest, uri));
-                } else {
-                    httpRequests.add(createHttpRequest(singleImpRequest, uri));
-                }
+                final ExtImpRubicon impExt = impToExt.getValue();
+                final List<BidRequest> impBidRequests = isMultiformatEnabled(impExt)
+                        ? createMultiFormatRequests(bidRequest, imp, impExt, language, errors)
+                        : List.of(createSingleRequest(bidRequest, imp, impExt, null, language, errors));
+
+                httpRequests.addAll(createImpHttpRequests(imp, impBidRequests, uri));
             } catch (PreBidException e) {
                 errors.add(BidderError.badInput(e.getMessage()));
             }
@@ -223,8 +238,61 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return Result.of(httpRequests, errors);
     }
 
+    private List<BidRequest> createMultiFormatRequests(BidRequest bidRequest,
+                                                       Imp imp,
+                                                       ExtImpRubicon impExt,
+                                                       String language,
+                                                       List<BidderError> errors) {
+
+        final Map<ImpMediaType, Imp> impByType = splitByMediaType(imp);
+        final Set<ImpMediaType> formats = impByType.keySet();
+        if (formats.size() == 1) {
+            return Collections.singletonList(
+                    createSingleRequest(bidRequest, imp, impExt, null, language, errors));
+        }
+
+        final List<BidRequest> bidRequests = new ArrayList<>();
+        for (Imp singleFormatImp : impByType.values()) {
+            try {
+                bidRequests.add(createSingleRequest(bidRequest, singleFormatImp, impExt, formats, language, errors));
+            } catch (PreBidException e) {
+                errors.add(BidderError.badInput(e.getMessage()));
+            }
+        }
+
+        return bidRequests;
+    }
+
+    private Map<ImpMediaType, Imp> splitByMediaType(Imp imp) {
+        final Map<ImpMediaType, Imp> impByType = new HashMap<>();
+        if (imp.getBanner() != null) {
+            impByType.put(ImpMediaType.banner, imp.toBuilder().video(null).xNative(null).audio(null).build());
+        }
+        if (imp.getVideo() != null) {
+            impByType.put(ImpMediaType.video, imp.toBuilder().banner(null).xNative(null).audio(null).build());
+        }
+        if (imp.getXNative() != null) {
+            impByType.put(ImpMediaType.xNative, imp.toBuilder().banner(null).video(null).audio(null).build());
+        }
+        if (imp.getAudio() != null) {
+            impByType.put(ImpMediaType.audio, imp.toBuilder().banner(null).video(null).xNative(null).build());
+        }
+
+        return impByType;
+    }
+
+    private List<HttpRequest<BidRequest>> createImpHttpRequests(Imp imp, List<BidRequest> impBidRequests, String uri) {
+        if (hasDeals(imp)) {
+            return impBidRequests.stream()
+                    .map(request -> createDealsRequests(request, uri))
+                    .flatMap(Collection::stream)
+                    .toList();
+        }
+        return impBidRequests.stream().map(request -> createHttpRequest(request, uri)).toList();
+    }
+
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final List<BidderError> errors = new ArrayList<>();
             final RubiconBidResponse bidResponse =
@@ -266,13 +334,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static boolean isValidType(Imp imp) {
-        return imp.getVideo() != null || imp.getBanner() != null;
+        return ObjectUtils.anyNotNull(imp.getVideo(), imp.getBanner(), imp.getXNative());
     }
 
     private BidderError impTypeErrorMessage(Imp imp) {
         final BidType type = resolveExpectedBidType(imp);
-        return BidderError.badInput(String.format("Impression with id %s rejected with invalid type `%s`."
-                + " Allowed types are banner and video.", imp.getId(), type != null ? type.name() : "unknown"));
+        return BidderError.badInput(
+                "Impression with id %s rejected with invalid type `%s`. Allowed types are [banner, video, native]"
+                        .formatted(imp.getId(), type != null ? type.name() : "unknown"));
     }
 
     private static BidType resolveExpectedBidType(Imp imp) {
@@ -301,14 +370,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return "Basic " + Base64.getEncoder().encodeToString((xapiUsername + ':' + xapiPassword).getBytes());
     }
 
-    private Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> parseRubiconImpExts(
-            List<Imp> imps, List<BidderError> errors) {
-
-        final Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToImpExt = new HashMap<>();
+    private Map<Imp, ExtImpRubicon> parseRubiconImpExts(List<Imp> imps, List<BidderError> errors) {
+        final Map<Imp, ExtImpRubicon> impToImpExt = new HashMap<>();
         for (final Imp imp : imps) {
             try {
-                final ExtPrebid<ExtImpPrebid, ExtImpRubicon> rubiconImpExt = parseRubiconExt(imp);
-                impToImpExt.put(imp, rubiconImpExt);
+                impToImpExt.put(imp, parseRubiconExt(imp));
             } catch (PreBidException e) {
                 errors.add(BidderError.badInput(e.getMessage()));
             }
@@ -316,18 +382,23 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return impToImpExt;
     }
 
-    private ExtPrebid<ExtImpPrebid, ExtImpRubicon> parseRubiconExt(Imp imp) {
+    private ExtImpRubicon parseRubiconExt(Imp imp) {
         try {
-            return mapper.mapper().convertValue(imp.getExt(), RUBICON_EXT_TYPE_REFERENCE);
+            return mapper.mapper().convertValue(imp.getExt(), RUBICON_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
             throw new PreBidException(e.getMessage(), e);
         }
     }
 
-    private static String firstImpExtLanguage(Collection<ExtPrebid<ExtImpPrebid, ExtImpRubicon>> rubiconImpExts) {
+    private static boolean isMultiformatEnabled(ExtImpRubicon extImp) {
+        return Optional.ofNullable(extImp)
+                .map(ExtImpRubicon::getBidOnMultiFormat)
+                .orElse(DEFAULT_MULTIFORMAT_VALUE);
+    }
+
+    private static String firstImpExtLanguage(Collection<ExtImpRubicon> rubiconImpExts) {
         return rubiconImpExts.stream()
                 .filter(Objects::nonNull)
-                .map(ExtPrebid::getBidder)
                 .map(ExtImpRubicon::getVideo)
                 .filter(Objects::nonNull)
                 .map(RubiconVideoParams::getLanguage)
@@ -336,21 +407,22 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .orElse(null);
     }
 
-    private BidRequest createSingleRequest(Imp imp,
-                                           ExtImpPrebid extImpPrebid,
+    private BidRequest createSingleRequest(BidRequest bidRequest,
+                                           Imp imp,
                                            ExtImpRubicon extImpRubicon,
-                                           BidRequest bidRequest,
+                                           Set<ImpMediaType> formats,
                                            String impLanguage,
                                            List<BidderError> errors) {
 
         return bidRequest.toBuilder()
-                .imp(Collections.singletonList(makeImp(imp, extImpPrebid, extImpRubicon, bidRequest, errors)))
-                .user(makeUser(bidRequest.getUser(), extImpRubicon))
+                .imp(Collections.singletonList(makeImp(imp, extImpRubicon, bidRequest, formats, errors)))
+                .user(downgradeUserConsent(makeUser(bidRequest.getUser(), extImpRubicon)))
                 .device(makeDevice(bidRequest.getDevice()))
                 .site(makeSite(bidRequest.getSite(), impLanguage, extImpRubicon))
                 .app(makeApp(bidRequest.getApp(), extImpRubicon))
                 .source(makeSource(bidRequest.getSource(), extImpRubicon.getPchain()))
                 .cur(null) // suppress currencies
+                .regs(makeRegs(bidRequest.getRegs()))
                 .ext(null) // suppress ext
                 .build();
     }
@@ -363,7 +435,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                         .setParameter(TK_XINT_QUERY_PARAMETER, tkXint)
                         .build().toString();
             } catch (URISyntaxException e) {
-                throw new PreBidException(String.format("Cant add the tk_xint value for url: %s", tkXint), e);
+                throw new PreBidException("Cant add the tk_xint value for url: " + tkXint, e);
             }
         }
         return endpointUrl;
@@ -393,37 +465,90 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private Imp makeImp(Imp imp,
-                        ExtImpPrebid extImpPrebid,
                         ExtImpRubicon extImpRubicon,
                         BidRequest bidRequest,
+                        Set<ImpMediaType> formats,
                         List<BidderError> errors) {
 
         final App app = bidRequest.getApp();
         final Site site = bidRequest.getSite();
         final ExtRequest extRequest = bidRequest.getExt();
+        final ImpMediaType impType = impType(imp);
+        final List<String> priceFloorsWarnings = new ArrayList<>();
+
+        final PriceFloorResult priceFloorResult = resolvePriceFloors(bidRequest, imp, impType, priceFloorsWarnings);
+        final Set<ImpMediaType> resolvedFormats = ObjectUtils.defaultIfNull(extImpRubicon.getFormats(), formats);
+
+        final BigDecimal ipfFloor = ObjectUtil.getIfNotNull(priceFloorResult, PriceFloorResult::getFloorValue);
+        final String ipfCurrency = ipfFloor != null
+                ? resolveCurrencyFromFloorResult(
+                ObjectUtil.getIfNotNull(priceFloorResult, PriceFloorResult::getCurrency),
+                bidRequest,
+                imp,
+                errors)
+                : null;
 
         final Imp.ImpBuilder builder = imp.toBuilder()
                 .metric(makeMetrics(imp))
-                .ext(mapper.mapper().valueToTree(makeImpExt(imp, extImpRubicon, site, app, extRequest)));
+                .ext(mapper.mapper().valueToTree(
+                        makeImpExt(
+                                imp,
+                                bidRequest,
+                                extImpRubicon,
+                                resolvedFormats,
+                                site,
+                                app,
+                                extRequest,
+                                ipfCurrency,
+                                priceFloorResult)));
 
-        final BigDecimal resolvedBidFloor = resolveBidFloor(imp, bidRequest, errors);
+        final BigDecimal resolvedBidFloor = ipfFloor != null
+                ? convertToXAPICurrency(ipfFloor, ipfCurrency, imp, bidRequest)
+                : resolveBidFloorFromImp(imp, bidRequest, errors);
+
         if (resolvedBidFloor != null) {
             builder
                     .bidfloorcur(XAPI_CURRENCY)
                     .bidfloor(resolvedBidFloor);
         }
 
-        if (isVideo(imp)) {
-            builder
+        switch (impType) {
+            case video -> builder
                     .banner(null)
-                    .video(makeVideo(imp, extImpRubicon.getVideo(), extImpPrebid, referer(site)));
-        } else {
-            builder
-                    .banner(makeBanner(imp, overriddenSizes(extImpRubicon)))
+                    .xNative(null)
+                    .rwdd(null)
+                    .video(makeVideo(imp, extImpRubicon.getVideo(), referer(site)));
+            case banner -> builder
+                    .banner(makeBanner(imp))
+                    .xNative(null)
                     .video(null);
+            default -> builder
+                    .video(null)
+                    .xNative(makeNative(imp));
         }
 
+        processWarnings(errors, priceFloorsWarnings);
+
         return builder.build();
+    }
+
+    private PriceFloorResult resolvePriceFloors(BidRequest bidRequest,
+                                                Imp imp,
+                                                ImpMediaType mediaType,
+                                                List<String> warnings) {
+
+        return floorResolver.resolve(
+                bidRequest,
+                extractFloorRules(bidRequest),
+                imp,
+                mediaType,
+                null,
+                warnings);
+    }
+
+    private static PriceFloorRules extractFloorRules(BidRequest bidRequest) {
+        final ExtRequestPrebid prebid = ObjectUtil.getIfNotNull(bidRequest.getExt(), ExtRequest::getPrebid);
+        return ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getFloors);
     }
 
     private List<Metric> makeMetrics(Imp imp) {
@@ -449,16 +574,27 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return supportedVendors.contains(metric.getVendor()) && Objects.equals(metric.getType(), "viewability");
     }
 
-    private BigDecimal resolveBidFloor(Imp imp, BidRequest bidRequest, List<BidderError> errors) {
+    private BigDecimal resolveBidFloorFromImp(Imp imp, BidRequest bidRequest, List<BidderError> errors) {
         final BigDecimal resolvedBidFloorPrice = resolveBidFloorPrice(imp);
         if (resolvedBidFloorPrice == null) {
             return null;
         }
 
-        final String resolvedBidFloorCurrency = resolveBidFloorCurrency(imp, bidRequest, errors);
-        return ObjectUtils.notEqual(resolvedBidFloorCurrency, XAPI_CURRENCY)
-                ? convertBidFloorCurrency(resolvedBidFloorPrice, resolvedBidFloorCurrency, imp, bidRequest)
-                : null;
+        return convertToXAPICurrency(
+                resolvedBidFloorPrice,
+                resolveBidFloorCurrency(imp, bidRequest, errors),
+                imp,
+                bidRequest);
+    }
+
+    private BigDecimal convertToXAPICurrency(BigDecimal value,
+                                             String fromCurrency,
+                                             Imp imp,
+                                             BidRequest bidRequest) {
+
+        return ObjectUtils.notEqual(fromCurrency, XAPI_CURRENCY)
+                ? convertBidFloorCurrency(value, fromCurrency, imp, bidRequest)
+                : value;
     }
 
     private static BigDecimal resolveBidFloorPrice(Imp imp) {
@@ -470,12 +606,27 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final String bidFloorCurrency = imp.getBidfloorcur();
         if (StringUtils.isBlank(bidFloorCurrency)) {
             if (isDebugEnabled(bidRequest)) {
-                errors.add(BidderError.badInput(String.format("Imp `%s` floor provided with no currency, assuming %s",
-                        imp.getId(), XAPI_CURRENCY)));
+                errors.add(BidderError.badInput("Imp `%s` floor provided with no currency, assuming %s"
+                        .formatted(imp.getId(), XAPI_CURRENCY)));
             }
             return XAPI_CURRENCY;
         }
         return bidFloorCurrency;
+    }
+
+    private static String resolveCurrencyFromFloorResult(String floorCurrency,
+                                                         BidRequest bidRequest,
+                                                         Imp imp,
+                                                         List<BidderError> errors) {
+
+        if (StringUtils.isBlank(floorCurrency)) {
+            if (isDebugEnabled(bidRequest)) {
+                errors.add(BidderError.badInput("Ipf for imp `%s` provided floor with no currency, assuming %s"
+                        .formatted(imp.getId(), XAPI_CURRENCY)));
+            }
+            return XAPI_CURRENCY;
+        }
+        return floorCurrency;
     }
 
     /**
@@ -497,27 +648,57 @@ public class RubiconBidder implements Bidder<BidRequest> {
         try {
             return currencyConversionService.convertCurrency(bidFloor, bidRequest, bidFloorCurrency, XAPI_CURRENCY);
         } catch (PreBidException e) {
-            throw new PreBidException(String.format(
-                    "Unable to convert provided bid floor currency from %s to %s for imp `%s` with a reason: %s",
-                    bidFloorCurrency, XAPI_CURRENCY, imp.getId(), e.getMessage()));
+            throw new PreBidException(
+                    "Unable to convert provided bid floor currency from %s to %s for imp `%s` with a reason: %s"
+                            .formatted(bidFloorCurrency, XAPI_CURRENCY, imp.getId(), e.getMessage()));
         }
     }
 
     private RubiconImpExt makeImpExt(Imp imp,
+                                     BidRequest bidRequest,
                                      ExtImpRubicon rubiconImpExt,
+                                     Set<ImpMediaType> formats,
                                      Site site,
                                      App app,
-                                     ExtRequest extRequest) {
+                                     ExtRequest extRequest,
+                                     String ipfResolvedCurrency,
+                                     PriceFloorResult priceFloorResult) {
 
         final ExtImpContext context = extImpContext(imp);
-        return RubiconImpExt.of(
-                RubiconImpExtRp.of(
-                        rubiconImpExt.getZoneId(),
-                        makeTarget(imp, rubiconImpExt, site, app, context),
-                        RubiconImpExtRpTrack.of("", "")),
-                mapVendorsNamesToUrls(imp.getMetric()),
-                getMaxBids(extRequest),
-                getGpid(imp.getExt()));
+        final RubiconImpExtPrebid rubiconImpExtPrebid = priceFloorResult != null
+                ? makeRubiconExtPrebid(priceFloorResult, ipfResolvedCurrency, imp, bidRequest)
+                : null;
+
+        final RubiconImpExtRpRtb rubiconImpExtRpRtb = CollectionUtils.isNotEmpty(formats)
+                ? RubiconImpExtRpRtb.of(formats)
+                : null;
+
+        final RubiconImpExtRp rubiconImpExtRp = RubiconImpExtRp.of(
+                rubiconImpExt.getZoneId(),
+                makeTarget(imp, rubiconImpExt, site, app, context),
+                RubiconImpExtRpTrack.of("", ""),
+                rubiconImpExtRpRtb);
+
+        return RubiconImpExt.builder()
+                .rp(rubiconImpExtRp)
+                .viewabilityvendors(mapVendorsNamesToUrls(imp.getMetric()))
+                .maxbids(getMaxBids(extRequest))
+                .gpid(getGpid(imp.getExt()))
+                .skadn(getSkadn(imp.getExt()))
+                .prebid(rubiconImpExtPrebid)
+                .build();
+    }
+
+    private ExtImpContext extImpContext(Imp imp) {
+        final JsonNode context = imp.getExt().get(FPD_CONTEXT_FIELD);
+        if (context == null || context.isNull()) {
+            return null;
+        }
+        try {
+            return mapper.mapper().convertValue(context, ExtImpContext.class);
+        } catch (IllegalArgumentException e) {
+            throw new PreBidException(e.getMessage(), e);
+        }
     }
 
     private JsonNode makeTarget(Imp imp, ExtImpRubicon rubiconImpExt, Site site, App app, ExtImpContext context) {
@@ -532,15 +713,27 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return result.size() > 0 ? result : null;
     }
 
-    private ExtImpContext extImpContext(Imp imp) {
-        final JsonNode context = imp.getExt().get(FPD_CONTEXT_FIELD);
-        if (context == null || context.isNull()) {
-            return null;
-        }
+    private RubiconImpExtPrebid makeRubiconExtPrebid(PriceFloorResult priceFloorResult,
+                                                     String currency,
+                                                     Imp imp,
+                                                     BidRequest bidRequest) {
+        final ObjectNode impExt = imp.getExt();
+        final ExtImpPrebid extImpPrebid = extImpPrebid(impExt.get(PREBID_EXT));
+        final ExtImpPrebidFloors floors = extImpPrebid != null ? extImpPrebid.getFloors() : null;
+
+        return RubiconImpExtPrebid.of(ExtImpPrebidFloors.of(
+                priceFloorResult.getFloorRule(),
+                convertToXAPICurrency(priceFloorResult.getFloorRuleValue(), currency, imp, bidRequest),
+                convertToXAPICurrency(priceFloorResult.getFloorValue(), currency, imp, bidRequest),
+                floors != null ? floors.getFloorMin() : null,
+                floors != null ? floors.getFloorMinCur() : null));
+    }
+
+    private ExtImpPrebid extImpPrebid(JsonNode extImpPrebid) {
         try {
-            return mapper.mapper().convertValue(context, ExtImpContext.class);
-        } catch (IllegalArgumentException e) {
-            throw new PreBidException(e.getMessage(), e);
+            return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
+        } catch (JsonProcessingException e) {
+            throw new PreBidException("Error decoding imp.ext.prebid: " + e.getMessage(), e);
         }
     }
 
@@ -704,6 +897,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 mergeIntoArray(targetNode, currentFieldName, Boolean.toString(currentField.booleanValue()));
             } else if (isBooleanArray(currentField)) {
                 mergeIntoArray(targetNode, currentFieldName, booleanArrayToStringList(currentField));
+            } else if (isIntegerArray(currentField)) {
+                mergeIntoArray(targetNode, currentFieldName, integerArrayToStringList(currentField));
             }
         }
     }
@@ -714,6 +909,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private static boolean isBooleanArray(JsonNode node) {
         return node.isArray() && StreamSupport.stream(node.spliterator(), false).allMatch(JsonNode::isBoolean);
+    }
+
+    private static boolean isIntegerArray(JsonNode node) {
+        return node.isArray() && StreamSupport.stream(node.spliterator(), false).allMatch(JsonNode::isIntegralNumber);
     }
 
     private ArrayNode stringsToStringArray(String... values) {
@@ -736,7 +935,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return StreamSupport.stream(booleanArray.spliterator(), false)
                 .map(JsonNode::booleanValue)
                 .map(value -> Boolean.toString(value))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private static List<String> integerArrayToStringList(JsonNode booleanArray) {
+        return StreamSupport.stream(booleanArray.spliterator(), false)
+                .map(JsonNode::intValue)
+                .map(value -> Integer.toString(value))
+                .toList();
     }
 
     private List<String> mapVendorsNamesToUrls(List<Metric> metrics) {
@@ -746,7 +952,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final List<String> vendorsUrls = metrics.stream()
                 .filter(this::isMetricSupported)
                 .map(metric -> ViewabilityVendors.valueOf(metric.getVendor()).getUrl())
-                .collect(Collectors.toList());
+                .toList();
         return vendorsUrls.isEmpty() ? null : vendorsUrls;
     }
 
@@ -764,6 +970,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private String getGpid(ObjectNode impExt) {
         final JsonNode gpidNode = impExt.get(FPD_GPID_FIELD);
         return gpidNode != null && gpidNode.isTextual() ? gpidNode.asText() : null;
+    }
+
+    private ObjectNode getSkadn(ObjectNode impExt) {
+        final JsonNode skadnNode = impExt.get(FPD_SKADN_FIELD);
+        return skadnNode != null && skadnNode.isObject() ? (ObjectNode) skadnNode : null;
     }
 
     private String getAdSlot(Imp imp, ExtImpContext context) {
@@ -800,39 +1011,46 @@ public class RubiconBidder implements Bidder<BidRequest> {
         }
     }
 
-    private static boolean isVideo(Imp imp) {
+    private static ImpMediaType impType(Imp imp) {
         final Video video = imp.getVideo();
-        if (video != null) {
-            // Do any other media types exist? Or check required video fields.
-            return imp.getBanner() == null || isFullyPopulatedVideo(video);
+        final Banner banner = imp.getBanner();
+        final Native xNative = imp.getXNative();
+        if (video != null && ((banner == null && xNative == null) || isFullyPopulatedVideo(video))) {
+            return ImpMediaType.video;
         }
-        return false;
+        if (banner == null && xNative != null) {
+            return ImpMediaType.xNative;
+        }
+
+        return ImpMediaType.banner;
     }
 
     private static boolean isFullyPopulatedVideo(Video video) {
         // These are just recommended video fields for XAPI
-        return video.getMimes() != null && video.getProtocols() != null && video.getMaxduration() != null
-                && video.getLinearity() != null && video.getApi() != null;
+        return video.getMimes() != null
+                && video.getProtocols() != null
+                && video.getMaxduration() != null
+                && video.getLinearity() != null;
     }
 
     private static String referer(Site site) {
         return site != null ? site.getPage() : null;
     }
 
-    private Video makeVideo(Imp imp, RubiconVideoParams rubiconVideoParams, ExtImpPrebid prebidImpExt, String referer) {
+    private Video makeVideo(Imp imp, RubiconVideoParams rubiconVideoParams, String referer) {
         final Video video = imp.getVideo();
 
         final Integer skip = rubiconVideoParams != null ? rubiconVideoParams.getSkip() : null;
         final Integer skipDelay = rubiconVideoParams != null ? rubiconVideoParams.getSkipdelay() : null;
         final Integer sizeId = rubiconVideoParams != null ? rubiconVideoParams.getSizeId() : null;
 
-        final Integer resolvedSizeId = sizeId == null || sizeId == 0
+        final Integer resolvedSizeId = BidderUtil.isNullOrZero(sizeId)
                 ? resolveVideoSizeId(video.getPlacement(), imp.getInstl())
                 : sizeId;
         validateVideoSizeId(resolvedSizeId, referer, imp.getId());
 
-        final String videoType = prebidImpExt != null && prebidImpExt.getIsRewardedInventory() != null
-                && prebidImpExt.getIsRewardedInventory() == 1 ? "rewarded" : null;
+        final Integer rewarded = imp.getRwdd();
+        final String videoType = rewarded != null && rewarded == 1 ? "rewarded" : null;
 
         // optimization for empty ext params
         if (skip == null && skipDelay == null && resolvedSizeId == null && videoType == null) {
@@ -848,8 +1066,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static void validateVideoSizeId(Integer resolvedSizeId, String referer, String impId) {
         // log only 1% of cases to monitor how often video impressions does not have size id
         if (resolvedSizeId == null) {
-            MISSING_VIDEO_SIZE_LOGGER.warn(String.format("RP adapter: video request with no size_id. Referrer URL = %s,"
-                    + " impId = %s", referer, impId), 0.01d);
+            MISSING_VIDEO_SIZE_LOGGER.warn(
+                    "RP adapter: video request with no size_id. Referrer URL = %s, impId = %s"
+                            .formatted(referer, impId),
+                    0.01d);
         }
     }
 
@@ -870,112 +1090,110 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return null;
     }
 
-    private static List<Format> overriddenSizes(ExtImpRubicon rubiconImpExt) {
-        final List<Format> overriddenSizes;
-
-        final List<Integer> sizeIds = rubiconImpExt.getSizes();
-        if (sizeIds != null) {
-            final List<Format> resolvedSizes = RubiconSize.idToSize(sizeIds);
-            if (resolvedSizes.isEmpty()) {
-                throw new PreBidException("Bad request.imp[].ext.rubicon.sizes");
-            }
-            overriddenSizes = resolvedSizes;
-        } else {
-            overriddenSizes = null;
-        }
-
-        return overriddenSizes;
-    }
-
-    private Banner makeBanner(Imp imp, List<Format> overriddenSizes) {
+    private Banner makeBanner(Imp imp) {
         final Banner banner = imp.getBanner();
-        final boolean isInterstitial = Objects.equals(imp.getInstl(), 1);
-        final List<Format> sizes = ObjectUtils.defaultIfNull(overriddenSizes, banner.getFormat());
-        if (CollectionUtils.isEmpty(sizes)) {
-            throw new PreBidException("rubicon imps must have at least one imp.format element");
+        final Integer width = banner.getW();
+        final Integer height = banner.getH();
+        final List<Format> format = banner.getFormat();
+        if ((width == null || height == null) && CollectionUtils.isEmpty(format)) {
+            throw new PreBidException("rubicon imps must have at least one size element [w, h, format]");
         }
 
         return banner.toBuilder()
-                .format(sizes)
-                .ext(mapper.mapper().valueToTree(makeBannerExt(sizes, isInterstitial)))
+                .ext(mapper.mapper().valueToTree(
+                        RubiconBannerExt.of(RubiconBannerExtRp.of("text/html"))))
                 .build();
     }
 
-    private static RubiconBannerExt makeBannerExt(List<Format> sizes, boolean isInterstitial) {
-        final List<Integer> rubiconSizeIds = mapToRubiconSizeIds(sizes, isInterstitial);
-        final Integer primarySizeId = rubiconSizeIds.get(0);
-        final List<Integer> altSizeIds = rubiconSizeIds.size() > 1
-                ? rubiconSizeIds.subList(1, rubiconSizeIds.size())
-                : null;
-
-        return RubiconBannerExt.of(RubiconBannerExtRp.of(primarySizeId, altSizeIds, "text/html"));
-    }
-
-    private static List<Integer> mapToRubiconSizeIds(List<Format> sizes, boolean isInterstitial) {
-        final List<Integer> validRubiconSizeIds = sizes.stream()
-                .map(RubiconSize::toId)
-                .filter(id -> id > 0)
-                .sorted(RubiconSize.comparator())
-                .collect(Collectors.toList());
-
-        if (validRubiconSizeIds.isEmpty()) {
-            // FIXME: Added 11.11.2020. short term solution for full screen interstitial adunits (PR #1003)
-            if (isInterstitial) {
-                validRubiconSizeIds.add(resolveNotStandardSizeForInstl(sizes.get(0)));
-            } else {
-                throw new PreBidException("No valid sizes");
-            }
+    private Native makeNative(Imp imp) {
+        final Native xNative = imp.getXNative();
+        final String version = ObjectUtil.getIfNotNull(xNative, Native::getVer);
+        if (StringUtils.equalsAny(version, "1.0", "1.1")) {
+            return xNative;
         }
-        return validRubiconSizeIds;
+        final String nativeRequest = xNative.getRequest();
+        final JsonNode requestNode = nodeFromString(nativeRequest);
+
+        try {
+            validateNativeRequest(requestNode);
+        } catch (PreBidException e) {
+            throw new PreBidException(
+                    String.format("Error in native object for imp with id %s: %s", imp.getId(), e.getMessage()));
+        }
+
+        return RubiconNative.builder()
+                .requestNative((ObjectNode) requestNode)
+                .request(xNative.getRequest())
+                .ver(xNative.getVer())
+                .api(xNative.getApi())
+                .battr(xNative.getBattr())
+                .ext(xNative.getExt())
+                .build();
     }
 
-    private static int resolveNotStandardSizeForInstl(Format size) {
-        return size.getH() > size.getW() ? PORTRAIT_MOBILE_SIZE_ID : LANDSCAPE_MOBILE_SIZE_ID;
+    public final JsonNode nodeFromString(String stringValue) {
+        try {
+            return StringUtils.isNotBlank(stringValue) ? mapper.mapper().readTree(stringValue) : null;
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    private void validateNativeRequest(JsonNode requestNode) {
+        if (requestNode == null) {
+            throw new PreBidException("Request can not be parsed");
+        }
+
+        final JsonNode eventtrackers = requestNode.get("eventtrackers");
+        if (eventtrackers == null || !eventtrackers.isArray()) {
+            throw new PreBidException("Eventtrackers are not present or not of array type");
+        }
+
+        final JsonNode context = requestNode.get("context");
+        if (context != null && !context.isInt()) {
+            throw new PreBidException("Context is not of int type");
+        }
+
+        final JsonNode placement = requestNode.get("plcmttype");
+        if (placement == null || !placement.isInt()) {
+            throw new PreBidException("Plcmttype is not present or not of int type");
+        }
     }
 
     private User makeUser(User user, ExtImpRubicon rubiconImpExt) {
         final String userId = user != null ? user.getId() : null;
-        final ExtUser extUser = user != null ? user.getExt() : null;
-        final String resolvedId = userId == null ? resolveUserId(extUser) : null;
-        final List<ExtUserEid> extUserEids = extUser != null ? extUser.getEids() : null;
+        final List<Eid> userEids = user != null ? user.getEids() : null;
+        final String resolvedId = userId == null ? resolveUserId(userEids) : null;
         final String userBuyeruid = user != null ? user.getBuyeruid() : null;
-        final String resolvedBuyeruid = userBuyeruid != null ? userBuyeruid : resolveBuyeruidFromEids(extUserEids);
-        final Map<String, List<ExtUserEid>> sourceToUserEidExt = extUser != null
-                ? specialExtUserEids(extUserEids)
-                : null;
-        final List<ExtUserTpIdRubicon> userExtTpIds = sourceToUserEidExt != null
-                ? extractExtUserTpIds(sourceToUserEidExt)
-                : null;
-        final boolean hasStypeToRemove = hasStypeToRemove(extUserEids);
-        final List<ExtUserEid> resolvedExtUserEids = hasStypeToRemove
-                ? prepareExtUserEids(extUserEids)
-                : extUserEids;
-        final RubiconUserExtRp userExtRp = rubiconUserExtRp(user, rubiconImpExt, sourceToUserEidExt);
+        final String resolvedBuyeruid = userBuyeruid != null ? userBuyeruid : resolveBuyeruidFromEids(userEids);
+        final ExtUser extUser = user != null ? user.getExt() : null;
+        final boolean hasStypeToRemove = hasStypeToRemove(userEids);
+        final List<Eid> resolvedUserEids = hasStypeToRemove
+                ? prepareUserEids(userEids)
+                : userEids;
+        final boolean hasDataToRemove = ObjectUtil.getIfNotNull(user, User::getData) != null;
+        final RubiconUserExtRp userExtRp = rubiconUserExtRp(user, rubiconImpExt);
         final ObjectNode userExtData = extUser != null ? extUser.getData() : null;
-        final String liverampId = extractLiverampId(sourceToUserEidExt);
 
         if (userExtRp == null
-                && userExtTpIds == null
                 && userExtData == null
-                && liverampId == null
+                && resolvedUserEids == null
                 && resolvedId == null
                 && Objects.equals(userBuyeruid, resolvedBuyeruid)
-                && !hasStypeToRemove) {
-            return user;
+                && !hasStypeToRemove
+        ) {
+
+            return hasDataToRemove
+                    ? user.toBuilder().data(null).build()
+                    : user;
         }
 
-        final ExtUser userExt = extUser != null
-                ? ExtUser.builder()
-                .consent(extUser.getConsent())
-                .eids(extUser.getEids())
-                .eids(resolvedExtUserEids)
-                .build()
-                : ExtUser.builder().build();
+        final ExtUser userExt = ExtUser.builder()
+                .eids(resolvedUserEids)
+                .build();
 
         final RubiconUserExt rubiconUserExt = RubiconUserExt.builder()
                 .rp(userExtRp)
-                .tpid(userExtTpIds)
-                .liverampIdl(liverampId)
                 .build();
 
         final User.UserBuilder userBuilder = user != null ? user.toBuilder() : User.builder();
@@ -986,158 +1204,127 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .gender(null)
                 .yob(null)
                 .geo(null)
+                .data(null)
+                .eids(null)
                 .ext(mapper.fillExtension(userExt, rubiconUserExt))
                 .build();
     }
 
-    private String resolveUserId(ExtUser extUser) {
-        final List<ExtUserEid> extUserEids = extUser != null ? extUser.getEids() : null;
-        return CollectionUtils.emptyIfNull(extUserEids)
+    // TODO: Refactor this
+    private User downgradeUserConsent(User user) {
+        if (user == null || user.getConsent() == null) {
+            return user;
+        }
+
+        final ExtUser extUser = user.getExt();
+
+        final ExtUser newUserExt = Optional.ofNullable(extUser)
+                .map(ExtUser::toBuilder)
+                .orElseGet(ExtUser::builder)
+                .consent(user.getConsent())
+                .build();
+
+        if (extUser != null) {
+            newUserExt.addProperties(user.getExt().getProperties());
+        }
+
+        return user.toBuilder()
+                .consent(null)
+                .ext(newUserExt)
+                .build();
+    }
+
+    private static String resolveUserId(List<Eid> userEids) {
+        return CollectionUtils.emptyIfNull(userEids)
                 .stream()
-                .map(extUserEid -> getIdFromFirstUuidWithStypePpuid(extUserEid.getUids()))
+                .map(userEid -> getIdFromFirstUuidWithStypePpuid(userEid.getUids()))
                 .filter(Objects::nonNull)
                 .findFirst()
                 .orElse(null);
     }
 
-    private String getIdFromFirstUuidWithStypePpuid(List<ExtUserEidUid> extUserEidUids) {
+    private static String getIdFromFirstUuidWithStypePpuid(List<Uid> extUserEidUids) {
         return CollectionUtils.emptyIfNull(extUserEidUids).stream()
                 .filter(Objects::nonNull)
                 .filter(extUserEidUid -> Objects.equals(PPUID_STYPE, getUserEidUidStype(extUserEidUid)))
-                .map(ExtUserEidUid::getId)
+                .map(Uid::getId)
                 .findFirst()
                 .orElse(null);
     }
 
-    private String getUserEidUidStype(ExtUserEidUid extUserEidUid) {
-        final ExtUserEidUidExt extUserEidUidExt = extUserEidUid.getExt();
-        return extUserEidUidExt != null ? extUserEidUidExt.getStype() : null;
-    }
-
-    private boolean hasStypeToRemove(List<ExtUserEid> extUserEids) {
-        return CollectionUtils.emptyIfNull(extUserEids).stream()
-                .filter(Objects::nonNull)
-                .map(ExtUserEid::getUids)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
-                .map(ExtUserEidUid::getExt)
-                .filter(Objects::nonNull)
-                .map(ExtUserEidUidExt::getStype)
-                .anyMatch(STYPE_TO_REMOVE::contains);
-    }
-
-    private List<ExtUserEid> prepareExtUserEids(List<ExtUserEid> extUserEids) {
-        return CollectionUtils.emptyIfNull(extUserEids).stream()
-                .filter(Objects::nonNull)
-                .map(RubiconBidder::prepareExtUserEid)
-                .collect(Collectors.toList());
-    }
-
-    private static ExtUserEid prepareExtUserEid(ExtUserEid extUserEid) {
-        final List<ExtUserEidUid> extUserEidUids = CollectionUtils.emptyIfNull(extUserEid.getUids()).stream()
-                .filter(Objects::nonNull)
-                .map(RubiconBidder::cleanExtUserEidUidStype)
-                .collect(Collectors.toList());
-        return ExtUserEid.of(extUserEid.getSource(), extUserEid.getId(), extUserEidUids, extUserEid.getExt());
-    }
-
-    private static ExtUserEidUid cleanExtUserEidUidStype(ExtUserEidUid extUserEidUid) {
-        final ExtUserEidUidExt extUserEidUidExt = extUserEidUid.getExt();
-        return extUserEidUidExt == null || !STYPE_TO_REMOVE.contains(extUserEidUidExt.getStype())
-                ? extUserEidUid
-                : ExtUserEidUid.of(extUserEidUid.getId(), extUserEidUid.getAtype(),
-                ExtUserEidUidExt.of(extUserEidUidExt.getRtiPartner(), null));
-    }
-
-    private static String resolveBuyeruidFromEids(List<ExtUserEid> eids) {
-        return CollectionUtils.emptyIfNull(eids).stream()
-                .filter(Objects::nonNull)
-                .filter(eid -> SOURCE_RUBICON.equals(eid.getSource()))
-                .map(ExtUserEid::getUids)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
-                .filter(Objects::nonNull)
-                .filter(RubiconBidder::validateExtUserEidUidForUserBuyeruid)
-                .map(ExtUserEidUid::getId)
-                .findFirst()
-                .orElse(null);
-
-    }
-
-    private static boolean validateExtUserEidUidForUserBuyeruid(ExtUserEidUid uid) {
-        final ExtUserEidUidExt uidExt = ObjectUtil.getIfNotNull(uid, ExtUserEidUid::getExt);
-        final String uidExtStype = ObjectUtil.getIfNotNull(uidExt, ExtUserEidUidExt::getStype);
-
-        return StringUtils.equalsAny(uidExtStype, PPUID_STYPE, OTHER_STYPE);
-    }
-
-    private static Map<String, List<ExtUserEid>> specialExtUserEids(List<ExtUserEid> eids) {
-        if (CollectionUtils.isEmpty(eids)) {
-            return null;
-        }
-        return eids.stream()
-                .filter(extUserEid -> StringUtils.equalsAny(extUserEid.getSource(),
-                        ADSERVER_EID, LIVEINTENT_EID, LIVERAMP_EID))
-                .filter(extUserEid -> CollectionUtils.isNotEmpty(extUserEid.getUids()))
-                .collect(Collectors.groupingBy(ExtUserEid::getSource));
-    }
-
-    /**
-     * Analyzes request.user.ext.eids and returns a list of new {@link ExtUserTpIdRubicon}s for supported vendors.
-     */
-    private static List<ExtUserTpIdRubicon> extractExtUserTpIds(Map<String, List<ExtUserEid>> specialExtUserEids) {
-        final List<ExtUserTpIdRubicon> result = new ArrayList<>();
-
-        specialExtUserEids.getOrDefault(ADSERVER_EID, Collections.emptyList()).stream()
-                .map(extUserEid -> extUserTpIdForAdServer(extUserEid.getUids().get(0)))
-                .filter(Objects::nonNull)
-                .forEach(result::add);
-
-        specialExtUserEids.getOrDefault(LIVEINTENT_EID, Collections.emptyList()).stream()
-                .map(extUserEid -> extUserTpIdForLiveintent(extUserEid.getUids().get(0)))
-                .filter(Objects::nonNull)
-                .findFirst()
-                .ifPresent(result::add);
-
-        return result.isEmpty() ? null : result;
-    }
-
-    /**
-     * Extracts {@link ExtUserTpIdRubicon} for AdServer.
-     */
-    private static ExtUserTpIdRubicon extUserTpIdForAdServer(ExtUserEidUid adServerEidUid) {
-        final ExtUserEidUidExt ext = adServerEidUid != null ? adServerEidUid.getExt() : null;
-        return ext != null && Objects.equals(ext.getRtiPartner(), "TDID")
-                ? ExtUserTpIdRubicon.of("tdid", adServerEidUid.getId())
+    private static String getUserEidUidStype(Uid uid) {
+        final ObjectNode uidExt = uid != null ? uid.getExt() : null;
+        final JsonNode stype = uidExt != null ? uidExt.path(STYPE_FIELD) : null;
+        return stype != null && !stype.isMissingNode()
+                ? stype.asText()
                 : null;
     }
 
-    /**
-     * Extracts {@link ExtUserTpIdRubicon} for Liveintent.
-     */
-    private static ExtUserTpIdRubicon extUserTpIdForLiveintent(ExtUserEidUid adServerEidUid) {
-        final String id = adServerEidUid != null ? adServerEidUid.getId() : null;
-        return id != null ? ExtUserTpIdRubicon.of(LIVEINTENT_EID, id) : null;
+    private static boolean hasStypeToRemove(List<Eid> userEids) {
+        return CollectionUtils.emptyIfNull(userEids).stream()
+                .filter(Objects::nonNull)
+                .map(Eid::getUids)
+                .filter(Objects::nonNull)
+                .flatMap(Collection::stream)
+                .map(RubiconBidder::getUserEidUidStype)
+                .filter(Objects::nonNull)
+                .anyMatch(STYPE_TO_REMOVE::contains);
     }
 
-    private RubiconUserExtRp rubiconUserExtRp(User user,
-                                              ExtImpRubicon rubiconImpExt,
-                                              Map<String, List<ExtUserEid>> sourceToUserEidExt) {
+    private static List<Eid> prepareUserEids(List<Eid> userEids) {
+        return CollectionUtils.emptyIfNull(userEids).stream()
+                .filter(Objects::nonNull)
+                .map(RubiconBidder::prepareExtUserEid)
+                .toList();
+    }
 
-        final JsonNode target = rubiconUserExtRpTarget(sourceToUserEidExt, rubiconImpExt.getVisitor(), user);
+    private static Eid prepareExtUserEid(Eid extUserEid) {
+        final List<Uid> extUserEidUids = CollectionUtils.emptyIfNull(extUserEid.getUids()).stream()
+                .filter(Objects::nonNull)
+                .map(RubiconBidder::cleanExtUserEidUidStype)
+                .toList();
+        return Eid.of(extUserEid.getSource(), extUserEidUids, extUserEid.getExt());
+    }
+
+    private static Uid cleanExtUserEidUidStype(Uid extUserEidUid) {
+        final ObjectNode extUserEidUidExt = extUserEidUid.getExt();
+        if (extUserEidUidExt == null || !STYPE_TO_REMOVE.contains(getUserEidUidStype(extUserEidUid))) {
+            return extUserEidUid;
+        }
+
+        final ObjectNode extUserEidUidExtCopy = extUserEidUidExt.deepCopy();
+        extUserEidUidExtCopy.remove(STYPE_FIELD);
+
+        return Uid.of(
+                extUserEidUid.getId(),
+                extUserEidUid.getAtype(),
+                extUserEidUidExtCopy);
+    }
+
+    private static String resolveBuyeruidFromEids(List<Eid> eids) {
+        return CollectionUtils.emptyIfNull(eids).stream()
+                .filter(Objects::nonNull)
+                .filter(eid -> SOURCE_RUBICON.equals(eid.getSource()))
+                .map(Eid::getUids)
+                .filter(Objects::nonNull)
+                .flatMap(Collection::stream)
+                .filter(Objects::nonNull)
+                .map(Uid::getId)
+                .findFirst()
+                .orElse(null);
+
+    }
+
+    private RubiconUserExtRp rubiconUserExtRp(User user, ExtImpRubicon rubiconImpExt) {
+        final JsonNode target = rubiconUserExtRpTarget(rubiconImpExt.getVisitor(), user);
 
         return target != null ? RubiconUserExtRp.of(target) : null;
     }
 
-    private JsonNode rubiconUserExtRpTarget(Map<String, List<ExtUserEid>> sourceToUserEidExt,
-                                            ObjectNode visitor,
-                                            User user) {
-
+    private JsonNode rubiconUserExtRpTarget(ObjectNode visitor, User user) {
         final ObjectNode result = existingRubiconUserExtRpTarget(user);
 
         populateFirstPartyDataAttributes(visitor, result);
-
-        copyLiveintentSegment(sourceToUserEidExt, result);
 
         if (user != null) {
             mergeFirstPartyDataFromUser(user.getExt(), result);
@@ -1145,7 +1332,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
             enrichWithIabAttribute(result, user.getData(), USER_SEGTAXES);
         }
 
-        return result.size() > 0 ? result : null;
+        return !result.isEmpty() ? result : null;
     }
 
     private ObjectNode existingRubiconUserExtRpTarget(User user) {
@@ -1157,17 +1344,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final JsonNode target = userRubiconRpExt != null ? userRubiconRpExt.getTarget() : null;
 
         return target != null && target.isObject() ? (ObjectNode) target : mapper.mapper().createObjectNode();
-    }
-
-    private static void copyLiveintentSegment(Map<String, List<ExtUserEid>> sourceToUserEidExt, ObjectNode result) {
-        if (sourceToUserEidExt != null && CollectionUtils.isNotEmpty(sourceToUserEidExt.get(LIVEINTENT_EID))) {
-            final ObjectNode ext = sourceToUserEidExt.get(LIVEINTENT_EID).get(0).getExt();
-            final JsonNode segment = ext != null ? ext.get("segments") : null;
-
-            if (segment != null) {
-                result.set("LIseg", segment);
-            }
-        }
     }
 
     private void mergeFirstPartyDataFromUser(ExtUser userExt, ObjectNode result) {
@@ -1186,7 +1362,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .flatMap(segments -> segments.stream()
                         .map(Segment::getId))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (CollectionUtils.isNotEmpty(iabValue)) {
             final ArrayNode iab = target.putArray("iab");
@@ -1200,16 +1376,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return taxonomyName != null && taxonomyName.isInt() && segtaxValues.contains(taxonomyName.intValue());
     }
 
-    private static String extractLiverampId(Map<String, List<ExtUserEid>> sourceToUserEidExt) {
-        final List<ExtUserEid> liverampEids = MapUtils.emptyIfNull(sourceToUserEidExt).get(LIVERAMP_EID);
-        for (ExtUserEid extUserEid : CollectionUtils.emptyIfNull(liverampEids)) {
-            return extUserEid.getUids().stream()
-                    .map(ExtUserEidUid::getId)
-                    .filter(StringUtils::isNotEmpty)
-                    .findFirst()
-                    .orElse(null);
+    private void processWarnings(List<BidderError> errors, List<String> priceFloorsWarnings) {
+        if (CollectionUtils.isNotEmpty(priceFloorsWarnings)) {
+            priceFloorsWarnings.forEach(warning -> errors.add(BidderError.badInput(warning)));
         }
-        return null;
     }
 
     private Device makeDevice(Device device) {
@@ -1237,16 +1407,21 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static Content makeSiteContent(Content siteContent, String impLanguage) {
-        if (StringUtils.isBlank(impLanguage)) {
-            return siteContent;
-        }
-        if (siteContent == null) {
-            return Content.builder().language(impLanguage).build();
-        } else {
-            return StringUtils.isBlank(siteContent.getLanguage())
-                    ? siteContent.toBuilder().language(impLanguage).build()
-                    : siteContent;
-        }
+        final boolean hasDataToRemove = ObjectUtil.getIfNotNull(siteContent, Content::getData) != null;
+
+        final String contentLanguage = ObjectUtil.getIfNotNull(siteContent, Content::getLanguage);
+        final String resolvedLanguage = StringUtils.isBlank(contentLanguage) && StringUtils.isNotBlank(impLanguage)
+                ? impLanguage
+                : null;
+
+        return resolvedLanguage != null || hasDataToRemove
+                ? Optional.ofNullable(siteContent)
+                .map(Content::toBuilder)
+                .orElseGet(Content::builder)
+                .data(null)
+                .language(resolvedLanguage != null ? resolvedLanguage : contentLanguage)
+                .build()
+                : siteContent;
     }
 
     private Publisher makePublisher(ExtImpRubicon rubiconImpExt) {
@@ -1302,11 +1477,54 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static Source makeSource(Source source, String pchain) {
-        if (StringUtils.isNotEmpty(pchain)) {
-            final Source.SourceBuilder builder = source != null ? source.toBuilder() : Source.builder();
-            return builder.pchain(pchain).build();
+        final boolean isPchainEmpty = StringUtils.isEmpty(pchain);
+        final SupplyChain supplyChain = source != null ? source.getSchain() : null;
+        if (isPchainEmpty && supplyChain == null) {
+            return source;
         }
-        return source;
+
+        final ExtSource extSource = source != null ? source.getExt() : null;
+        final ExtSource resolvedExtSource = supplyChain != null
+                ? copyProperties(extSource, ExtSource.of(supplyChain))
+                : extSource;
+
+        final Source.SourceBuilder builder = source != null ? source.toBuilder() : Source.builder();
+        return builder
+                .pchain(!isPchainEmpty ? pchain : null)
+                .schain(null)
+                .ext(resolvedExtSource)
+                .build();
+    }
+
+    private static <T extends FlexibleExtension> T copyProperties(T source, T target) {
+        Optional.ofNullable(source)
+                .map(FlexibleExtension::getProperties)
+                .ifPresent(target::addProperties);
+
+        return target;
+    }
+
+    private static Regs makeRegs(Regs regs) {
+        if (regs == null) {
+            return null;
+        }
+
+        final Integer gdpr = regs.getGdpr();
+        final String usPrivacy = regs.getUsPrivacy();
+        if (gdpr == null && usPrivacy == null) {
+            return regs;
+        }
+
+        final ExtRegs originalExtRegs = regs.getExt();
+        final String gpc = originalExtRegs != null ? originalExtRegs.getGpc() : null;
+        final ExtRegsDsa dsa = originalExtRegs != null ? originalExtRegs.getDsa() : null;
+        final ExtRegs extRegs = copyProperties(originalExtRegs, ExtRegs.of(gdpr, usPrivacy, gpc, dsa));
+
+        return regs.toBuilder()
+                .gdpr(null)
+                .usPrivacy(null)
+                .ext(extRegs)
+                .build();
     }
 
     private HttpRequest<BidRequest> createHttpRequest(BidRequest bidRequest, String uri) {
@@ -1316,6 +1534,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .body(mapper.encodeToBytes(bidRequest))
                 .headers(headers)
                 .payload(bidRequest)
+                .impIds(BidderUtil.impIds(bidRequest))
                 .build();
     }
 
@@ -1332,7 +1551,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .map(lineItem -> createLineItemBidRequest(lineItem, bidRequest, singleImp))
                 .map((BidRequest request) -> createHttpRequest(request, uri))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidRequest createLineItemBidRequest(ExtDealLine lineItem, BidRequest bidRequest, Imp imp) {
@@ -1361,10 +1580,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         final ObjectNode modifiedTargetNode = targetNode.put("line_item", extLineItemId);
         final RubiconImpExtRp modifiedImpExtRp = RubiconImpExtRp.of(impExtRp.getZoneId(), modifiedTargetNode,
-                impExtRp.getTrack());
+                impExtRp.getTrack(), impExtRp.getRtb());
 
-        return mapper.mapper().valueToTree(RubiconImpExt.of(modifiedImpExtRp, rubiconImpExt.getViewabilityvendors(),
-                getMaxBids(extRequest), adSlot));
+        return mapper.mapper().valueToTree(rubiconImpExt.toBuilder()
+                .rp(modifiedImpExtRp)
+                .maxbids(getMaxBids(extRequest))
+                .gpid(adSlot)
+                .prebid(null)
+                .build());
     }
 
     private List<BidderBid> extractBids(BidRequest prebidRequest,
@@ -1382,6 +1605,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
                                              List<BidderError> errors) {
         final Map<String, Imp> idToImp = prebidRequest.getImp().stream()
                 .collect(Collectors.toMap(Imp::getId, Function.identity()));
+        final Map<String, Imp> idToRubiconImp = bidRequest.getImp().stream()
+                .collect(Collectors.toMap(Imp::getId, Function.identity()));
         final Float cpmOverrideFromRequest = cpmOverrideFromRequest(prebidRequest);
         final BidType bidType = bidType(bidRequest);
 
@@ -1392,8 +1617,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> updateBid(bid, idToImp.get(bid.getImpid()), cpmOverrideFromRequest, bidResponse))
-                .map(bid -> BidderBid.of(bid, bidType, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .map(bid -> createBidderBid(bid, idToRubiconImp.get(bid.getImpid()), bidType, bidResponse.getCur()))
+                .toList();
     }
 
     private RubiconSeatBid updateSeatBids(RubiconSeatBid seatBid, List<BidderError> errors) {
@@ -1402,14 +1627,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
         if (networkId <= 0) {
             return seatBid;
         }
-        final List<Bid> updatedBids = seatBid.getBid().stream()
+        final List<RubiconBid> updatedBids = seatBid.getBid().stream()
                 .map(bid -> insertNetworkIdToMeta(bid, networkId, errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         return seatBid.toBuilder().bid(updatedBids).build();
     }
 
-    private Bid insertNetworkIdToMeta(Bid bid, int networkId, List<BidderError> errors) {
+    private RubiconBid insertNetworkIdToMeta(RubiconBid bid, int networkId, List<BidderError> errors) {
         final ObjectNode bidExt = bid.getExt();
         final ExtPrebid<ExtBidPrebid, ObjectNode> extPrebid;
         try {
@@ -1419,10 +1644,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
             return null;
         }
         final ExtBidPrebid extBidPrebid = extPrebid != null ? extPrebid.getPrebid() : null;
-        final ObjectNode meta = extBidPrebid != null ? extBidPrebid.getMeta() : null;
-
-        final ObjectNode updatedMeta = meta != null ? meta : mapper.mapper().createObjectNode();
-        updatedMeta.set("networkId", IntNode.valueOf(networkId));
+        final ExtBidPrebidMeta meta = extBidPrebid != null ? extBidPrebid.getMeta() : null;
+        final ExtBidPrebidMeta updatedMeta = meta != null
+                ? meta.toBuilder().networkId(networkId).build()
+                : ExtBidPrebidMeta.builder().networkId(networkId).build();
 
         final ExtBidPrebid modifiedExtBidPrebid = extBidPrebid != null
                 ? extBidPrebid.toBuilder().meta(updatedMeta).build()
@@ -1438,11 +1663,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
         try {
             return bidExt != null ? mapper.mapper().convertValue(bidExt, EXT_PREBID_TYPE_REFERENCE) : null;
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Invalid ext passed in bid with id: %s", bidId));
+            throw new PreBidException("Invalid ext passed in bid with id: " + bidId);
         }
     }
 
-    private Bid updateBid(Bid bid, Imp imp, Float cpmOverrideFromRequest, RubiconBidResponse bidResponse) {
+    private Bid updateBid(RubiconBid bid, Imp imp, Float cpmOverrideFromRequest, RubiconBidResponse bidResponse) {
         String bidId = bid.getId();
         if (generateBidId) {
             // Since Rubicon XAPI returns openrtb_response.seatbid.bid.id not unique enough
@@ -1460,9 +1685,38 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 ? new BigDecimal(String.valueOf(cpmOverride))
                 : bid.getPrice();
 
-        return bid.toBuilder()
+        final RubiconBid updatedRubiconBid = bid.toBuilder()
                 .id(bidId)
+                .adm(resolveAdm(bid.getAdm(), bid.getAdmNative()))
                 .price(bidPrice)
+                .build();
+
+        return bidFromRubiconBid(updatedRubiconBid);
+    }
+
+    private String resolveAdm(String bidAdm, ObjectNode admobject) {
+        if (StringUtils.isNotBlank(bidAdm)) {
+            return bidAdm;
+        }
+
+        return admobject != null ? admobject.toString() : null;
+    }
+
+    private Bid bidFromRubiconBid(RubiconBid rubiconBid) {
+        try {
+            return mapper.mapper().convertValue(rubiconBid, Bid.class);
+        } catch (IllegalArgumentException e) {
+            throw new PreBidException("Error converting rubiconBid to  ortbBid: " + e.getMessage(), e);
+        }
+    }
+
+    private static BidderBid createBidderBid(Bid bid, Imp imp, BidType bidType, String currency) {
+
+        return BidderBid.builder()
+                .bid(bid)
+                .type(bidType)
+                .bidCurrency(currency)
+                .priceFloorInfo(imp != null ? PriceFloorInfo.of(imp.getBidfloor(), imp.getBidfloorcur()) : null)
                 .build();
     }
 
@@ -1473,14 +1727,21 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private Float cpmOverrideFromImp(Imp imp) {
-        final ExtPrebid<ExtImpPrebid, ExtImpRubicon> extPrebid = imp != null ? parseRubiconExt(imp) : null;
-        final ExtImpRubicon bidder = extPrebid != null ? extPrebid.getBidder() : null;
-        final ExtImpRubiconDebug debug = bidder != null ? bidder.getDebug() : null;
-        return debug != null ? debug.getCpmoverride() : null;
+        return Optional.ofNullable(imp)
+                .map(this::parseRubiconExt)
+                .map(ExtImpRubicon::getDebug)
+                .map(ExtImpRubiconDebug::getCpmoverride)
+                .orElse(null);
     }
 
     private static BidType bidType(BidRequest bidRequest) {
-        return isVideo(bidRequest.getImp().get(0)) ? BidType.video : BidType.banner;
+        final ImpMediaType impMediaType = impType(bidRequest.getImp().get(0));
+        return switch (impMediaType) {
+            case video -> BidType.video;
+            case banner -> BidType.banner;
+            case xNative -> BidType.xNative;
+            default -> throw new PreBidException("Unsupported bid mediaType");
+        };
     }
 
     private ObjectNode toObjectNode(JsonNode node) {
