@@ -12,8 +12,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -29,7 +29,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class SilvermobBidder implements Bidder<BidRequest> {
 
@@ -66,6 +65,9 @@ public class SilvermobBidder implements Bidder<BidRequest> {
 
     private HttpRequest<BidRequest> createRequestForImp(Imp imp, BidRequest request) {
         final ExtImpSilvermob extImp = parseImpExt(imp);
+        if (isInvalidHost(extImp.getHost())) {
+            throw new PreBidException(String.format("Invalid host: %s", extImp.getHost()));
+        }
 
         final BidRequest outgoingRequest = request.toBuilder()
                 .imp(Collections.singletonList(imp))
@@ -84,16 +86,19 @@ public class SilvermobBidder implements Bidder<BidRequest> {
         try {
             extImp = mapper.mapper().convertValue(imp.getExt(), SILVERMOB_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("error unmarshalling imp.ext.bidder: %s", e.getMessage()));
+            throw new PreBidException("error unmarshalling imp.ext.bidder: " + e.getMessage());
         }
         if (StringUtils.isBlank(extImp.getHost())) {
             throw new PreBidException("host is a required silvermob ext.imp param");
         }
-
         if (StringUtils.isBlank(extImp.getZoneId())) {
             throw new PreBidException("zoneId is a required silvermob ext.imp param");
         }
         return extImp;
+    }
+
+    private static Boolean isInvalidHost(String host) {
+        return !StringUtils.equalsAny(host, "eu", "us", "apac");
     }
 
     private String resolveEndpoint(ExtImpSilvermob extImp) {
@@ -116,7 +121,7 @@ public class SilvermobBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             return Result.of(extractBids(httpCall), Collections.emptyList());
         } catch (DecodeException | PreBidException e) {
@@ -124,12 +129,12 @@ public class SilvermobBidder implements Bidder<BidRequest> {
         }
     }
 
-    private List<BidderBid> extractBids(HttpCall<BidRequest> httpCall) {
+    private List<BidderBid> extractBids(BidderCall<BidRequest> httpCall) {
         final BidResponse bidResponse;
         try {
             bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
         } catch (DecodeException e) {
-            throw new PreBidException(String.format("Error unmarshalling server Response: %s", e.getMessage()));
+            throw new PreBidException("Error unmarshalling server Response: " + e.getMessage());
         }
         if (bidResponse == null) {
             throw new PreBidException("Response in not present");
@@ -147,7 +152,7 @@ public class SilvermobBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidType getBidType(String impId, List<Imp> imps) {
