@@ -8,6 +8,7 @@ import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
+import com.iab.openrtb.request.Native;
 import com.iab.openrtb.request.Publisher;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.request.User;
@@ -16,15 +17,14 @@ import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.vertx.core.MultiMap;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.model.Endpoint;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.smaato.proto.SmaatoBidExt;
@@ -43,13 +43,14 @@ import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
-import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidPbs;
+import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidServer;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.smaato.ExtImpSmaato;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebidVideo;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.time.Clock;
@@ -74,6 +75,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
     private static final String SMT_AD_TYPE_IMG = "Img";
     private static final String SMT_ADTYPE_RICHMEDIA = "Richmedia";
     private static final String SMT_ADTYPE_VIDEO = "Video";
+    private static final String IMP_EXT_SKADN_FIELD = "skadn";
 
     private static final int DEFAULT_TTL = 300;
 
@@ -131,7 +133,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         }
 
         final Integer yob = smaatoUserExtData.getYob();
-        if (yob != null && yob != 0) {
+        if (!BidderUtil.isNullOrZero(yob)) {
             userBuilder.yob(yob);
         }
 
@@ -159,14 +161,14 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         try {
             return mapper.mapper().convertValue(ext, className);
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Cannot decode extension: %s", e.getMessage()), e);
+            throw new PreBidException("Cannot decode extension: " + e.getMessage(), e);
         }
     }
 
     private static boolean isVideoRequest(BidRequest bidRequest) {
         final ExtRequestPrebid prebid = getIfNotNull(bidRequest.getExt(), ExtRequest::getPrebid);
-        final ExtRequestPrebidPbs pbs = getIfNotNull(prebid, ExtRequestPrebid::getPbs);
-        final String endpointName = getIfNotNull(pbs, ExtRequestPrebidPbs::getEndpoint);
+        final ExtRequestPrebidServer server = getIfNotNull(prebid, ExtRequestPrebid::getServer);
+        final String endpointName = getIfNotNull(server, ExtRequestPrebidServer::getEndpoint);
 
         return StringUtils.equals(endpointName, Endpoint.openrtb2_video.value());
     }
@@ -187,7 +189,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
                 .map(impsPod -> preparePodRequest(bidRequest, impsPod, errors))
                 .filter(Objects::nonNull)
                 .map(this::constructHttpRequest)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static String extractPod(Imp imp) {
@@ -196,13 +198,14 @@ public class SmaatoBidder implements Bidder<BidRequest> {
 
     private BidRequest preparePodRequest(BidRequest bidRequest, List<Imp> imps, List<BidderError> errors) {
         try {
-            final ExtImpSmaato extImpSmaato = mapper.mapper().convertValue(imps.get(0).getExt(),
-                    SMAATO_EXT_TYPE_REFERENCE).getBidder();
-
+            final ObjectNode impExt = imps.get(0).getExt();
+            final ExtImpSmaato extImpSmaato =
+                    mapper.mapper().convertValue(impExt, SMAATO_EXT_TYPE_REFERENCE).getBidder();
             final String publisherId = getIfNotNullOrThrow(extImpSmaato, ExtImpSmaato::getPublisherId, "publisherId");
             final String adBreakId = getIfNotNullOrThrow(extImpSmaato, ExtImpSmaato::getAdbreakId, "adbreakId");
 
-            return modifyBidRequest(bidRequest, publisherId, () -> modifyImpsForAdBreak(imps, adBreakId));
+            return modifyBidRequest(bidRequest, publisherId, () ->
+                    modifyImpsForAdBreak(imps, adBreakId, resolveImpExtSkadn(impExt)));
         } catch (PreBidException | IllegalArgumentException e) {
             errors.add(BidderError.badInput(e.getMessage()));
             return null;
@@ -226,13 +229,14 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         return bidRequestBuilder.imp(impSupplier.get()).build();
     }
 
-    private List<Imp> modifyImpsForAdBreak(List<Imp> imps, String adBreakId) {
+    private List<Imp> modifyImpsForAdBreak(List<Imp> imps, String adBreakId, ObjectNode impExtSkadn) {
         return IntStream.range(0, imps.size())
-                .mapToObj(idx -> modifyImpForAdBreak(imps.get(idx), idx + 1, adBreakId))
-                .collect(Collectors.toList());
+                .mapToObj(idx ->
+                        modifyImpForAdBreak(imps.get(idx), idx + 1, adBreakId, idx == 0 ? impExtSkadn : null))
+                .toList();
     }
 
-    private Imp modifyImpForAdBreak(Imp imp, Integer sequence, String adBreakId) {
+    private Imp modifyImpForAdBreak(Imp imp, Integer sequence, String adBreakId, ObjectNode impExtSkadn) {
         final Video modifiedVideo = imp.getVideo().toBuilder()
                 .sequence(sequence)
                 .ext(mapper.mapper().createObjectNode().set("context", TextNode.valueOf("adpod")))
@@ -240,7 +244,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         return imp.toBuilder()
                 .tagid(adBreakId)
                 .video(modifiedVideo)
-                .ext(null)
+                .ext(impExtSkadn)
                 .build();
     }
 
@@ -249,7 +253,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
                 .map(imp -> prepareIndividualRequest(bidRequest, imp, errors))
                 .filter(Objects::nonNull)
                 .map(this::constructHttpRequest)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Imp> splitImps(List<Imp> imps, List<BidderError> errors) {
@@ -258,16 +262,20 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         for (Imp imp : imps) {
             final Banner banner = imp.getBanner();
             final Video video = imp.getVideo();
-            if (video == null && banner == null) {
-                errors.add(BidderError.badInput("Invalid MediaType. Smaato only supports Banner and Video."));
+            final Native xNative = imp.getXNative();
+            if (ObjectUtils.allNull(video, banner, xNative)) {
+                errors.add(BidderError.badInput("Invalid MediaType. Smaato only supports Banner, Video and Native."));
                 continue;
             }
 
             if (video != null) {
-                splitImps.add(imp.toBuilder().banner(null).build());
+                splitImps.add(imp.toBuilder().banner(null).xNative(null).build());
             }
             if (banner != null) {
-                splitImps.add(imp.toBuilder().video(null).build());
+                splitImps.add(imp.toBuilder().video(null).xNative(null).build());
+            }
+            if (xNative != null) {
+                splitImps.add(imp.toBuilder().banner(null).video(null).build());
             }
         }
 
@@ -276,23 +284,35 @@ public class SmaatoBidder implements Bidder<BidRequest> {
 
     private BidRequest prepareIndividualRequest(BidRequest bidRequest, Imp imp, List<BidderError> errors) {
         try {
-            final ExtImpSmaato extImpSmaato = mapper.mapper().convertValue(imp.getExt(),
-                    SMAATO_EXT_TYPE_REFERENCE).getBidder();
+            final ObjectNode impExt = imp.getExt();
+            final ExtImpSmaato extImpSmaato =
+                    mapper.mapper().convertValue(impExt, SMAATO_EXT_TYPE_REFERENCE).getBidder();
             final String publisherId = getIfNotNullOrThrow(extImpSmaato, ExtImpSmaato::getPublisherId, "publisherId");
             final String adSpaceId = getIfNotNullOrThrow(extImpSmaato, ExtImpSmaato::getAdspaceId, "adspaceId");
 
-            return modifyBidRequest(bidRequest, publisherId, () -> modifyImpForAdSpace(imp, adSpaceId));
+            return modifyBidRequest(bidRequest, publisherId, () ->
+                    modifyImpForAdSpace(imp, adSpaceId, resolveImpExtSkadn(impExt)));
         } catch (PreBidException | IllegalArgumentException e) {
             errors.add(BidderError.badInput(e.getMessage()));
             return null;
         }
     }
 
-    private List<Imp> modifyImpForAdSpace(Imp imp, String adSpaceId) {
+    private ObjectNode resolveImpExtSkadn(ObjectNode impExt) {
+        if (!impExt.has(IMP_EXT_SKADN_FIELD)) {
+            return null;
+        } else if (impExt.get(IMP_EXT_SKADN_FIELD).isEmpty() || !impExt.get(IMP_EXT_SKADN_FIELD).isObject()) {
+            throw new PreBidException("Invalid imp.ext.skadn");
+        } else {
+            return mapper.mapper().createObjectNode().set(IMP_EXT_SKADN_FIELD, impExt.get(IMP_EXT_SKADN_FIELD));
+        }
+    }
+
+    private List<Imp> modifyImpForAdSpace(Imp imp, String adSpaceId, ObjectNode impExtSkadn) {
         final Imp modifiedImp = imp.toBuilder()
                 .tagid(adSpaceId)
                 .banner(getIfNotNull(imp.getBanner(), SmaatoBidder::modifyBanner))
-                .ext(null)
+                .ext(impExtSkadn)
                 .build();
 
         return Collections.singletonList(modifiedImp);
@@ -311,17 +331,11 @@ public class SmaatoBidder implements Bidder<BidRequest> {
     }
 
     private HttpRequest<BidRequest> constructHttpRequest(BidRequest bidRequest) {
-        return HttpRequest.<BidRequest>builder()
-                .uri(endpointUrl)
-                .method(HttpMethod.POST)
-                .headers(HttpUtil.headers())
-                .body(mapper.encodeToBytes(bidRequest))
-                .payload(bidRequest)
-                .build();
+        return BidderUtil.defaultRequest(bidRequest, endpointUrl, mapper);
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return extractBids(bidResponse, httpCall.getResponse().getHeaders());
@@ -343,7 +357,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> bidderBid(bid, bidResponse.getCur(), headers, errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         return Result.of(bidderBids, errors);
     }
@@ -352,7 +366,7 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         try {
             final String bidAdm = bid.getAdm();
             if (StringUtils.isBlank(bidAdm)) {
-                throw new PreBidException(String.format("Empty ad markup in bid with id: %s", bid.getId()));
+                throw new PreBidException("Empty ad markup in bid with id: " + bid.getId());
             }
             final String markupType = getAdMarkupType(headers, bidAdm);
             final BidType bidType = getBidType(markupType);
@@ -411,20 +425,16 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         } else if (adm.startsWith("<?xml")) {
             return SMT_ADTYPE_VIDEO;
         }
-        throw new PreBidException(String.format("Invalid ad markup %s.", adm));
+        throw new PreBidException("Invalid ad markup %s.".formatted(adm));
     }
 
     private String renderAdMarkup(String markupType, String adm) {
-        switch (markupType) {
-            case SMT_AD_TYPE_IMG:
-                return extractAdmImage(adm);
-            case SMT_ADTYPE_RICHMEDIA:
-                return extractAdmRichMedia(adm);
-            case SMT_ADTYPE_VIDEO:
-                return markupType;
-            default:
-                throw new PreBidException(String.format("Unknown markup type %s", markupType));
-        }
+        return switch (markupType) {
+            case SMT_AD_TYPE_IMG -> extractAdmImage(adm);
+            case SMT_ADTYPE_RICHMEDIA -> extractAdmRichMedia(adm);
+            case SMT_ADTYPE_VIDEO -> markupType;
+            default -> throw new PreBidException("Unknown markup type " + markupType);
+        };
     }
 
     private String extractAdmImage(String adm) {
@@ -436,18 +446,19 @@ public class SmaatoBidder implements Bidder<BidRequest> {
 
         final StringBuilder clickEvent = new StringBuilder();
         CollectionUtils.emptyIfNull(image.getClickTrackers())
-                .forEach(tracker -> clickEvent.append(String.format(
-                        "fetch(decodeURIComponent('%s'.replace(/\\+/g, ' ')), {cache: 'no-cache'});",
-                        HttpUtil.encodeUrl(StringUtils.stripToEmpty(tracker)))));
+                .forEach(tracker -> clickEvent.append(
+                        "fetch(decodeURIComponent('%s'.replace(/\\+/g, ' ')), {cache: 'no-cache'});"
+                                .formatted(HttpUtil.encodeUrl(StringUtils.stripToEmpty(tracker)))));
 
         final StringBuilder impressionTracker = new StringBuilder();
         CollectionUtils.emptyIfNull(image.getImpressionTrackers())
                 .forEach(tracker -> impressionTracker.append(
-                        String.format("<img src=\"%s\" alt=\"\" width=\"0\" height=\"0\"/>", tracker)));
+                        "<img src=\"%s\" alt=\"\" width=\"0\" height=\"0\"/>".formatted(tracker)));
 
         final SmaatoImg img = image.getImg();
-        return String.format("<div style=\"cursor:pointer\" onclick=\"%s;window.open(decodeURIComponent"
-                        + "('%s'.replace(/\\+/g, ' ')));\"><img src=\"%s\" width=\"%d\" height=\"%d\"/>%s</div>",
+        return """
+                <div style="cursor:pointer" onclick="%s;window.open(decodeURIComponent\
+                ('%s'.replace(/\\+/g, ' ')));"><img src="%s" width="%d" height="%d"/>%s</div>""".formatted(
                 clickEvent,
                 HttpUtil.encodeUrl(StringUtils.stripToEmpty(getIfNotNull(img, SmaatoImg::getCtaurl))),
                 StringUtils.stripToEmpty(getIfNotNull(img, SmaatoImg::getUrl)),
@@ -465,16 +476,15 @@ public class SmaatoBidder implements Bidder<BidRequest> {
 
         final StringBuilder clickEvent = new StringBuilder();
         CollectionUtils.emptyIfNull(richmedia.getClickTrackers())
-                .forEach(tracker -> clickEvent.append(
-                        String.format("fetch(decodeURIComponent('%s'), {cache: 'no-cache'});",
-                                HttpUtil.encodeUrl(StringUtils.stripToEmpty(tracker)))));
+                .forEach(tracker -> clickEvent.append("fetch(decodeURIComponent('%s'), {cache: 'no-cache'});"
+                        .formatted(HttpUtil.encodeUrl(StringUtils.stripToEmpty(tracker)))));
 
         final StringBuilder impressionTracker = new StringBuilder();
         CollectionUtils.emptyIfNull(richmedia.getImpressionTrackers())
                 .forEach(tracker -> impressionTracker.append(
-                        String.format("<img src=\"%s\" alt=\"\" width=\"0\" height=\"0\"/>", tracker)));
+                        "<img src=\"%s\" alt=\"\" width=\"0\" height=\"0\"/>".formatted(tracker)));
 
-        return String.format("<div onclick=\"%s\">%s%s</div>",
+        return "<div onclick=\"%s\">%s%s</div>".formatted(
                 clickEvent,
                 StringUtils.stripToEmpty(getIfNotNull(richmedia.getMediadata(), SmaatoMediaData::getContent)),
                 impressionTracker);
@@ -484,26 +494,22 @@ public class SmaatoBidder implements Bidder<BidRequest> {
         try {
             return mapper.decodeValue(value, className);
         } catch (DecodeException e) {
-            throw new PreBidException(String.format("Cannot decode bid.adm: %s", e.getMessage()), e);
+            throw new PreBidException("Cannot decode bid.adm: " + e.getMessage(), e);
         }
     }
 
     private static BidType getBidType(String markupType) {
-        switch (markupType) {
-            case SMT_AD_TYPE_IMG:
-            case SMT_ADTYPE_RICHMEDIA:
-                return BidType.banner;
-            case SMT_ADTYPE_VIDEO:
-                return BidType.video;
-            default:
-                throw new PreBidException(String.format("Invalid markupType %s", markupType));
-        }
+        return switch (markupType) {
+            case SMT_AD_TYPE_IMG, SMT_ADTYPE_RICHMEDIA -> BidType.banner;
+            case SMT_ADTYPE_VIDEO -> BidType.video;
+            default -> throw new PreBidException("Invalid markupType " + markupType);
+        };
     }
 
     private static <T, R> R getIfNotNullOrThrow(T target, Function<T, R> getter, String propertyName) {
         final R result = getIfNotNull(target, getter);
         if (result == null) {
-            throw new PreBidException(String.format("Missing %s property.", propertyName));
+            throw new PreBidException("Missing %s property.".formatted(propertyName));
         }
         return result;
     }
