@@ -12,9 +12,12 @@ import io.vertx.core.logging.LoggerFactory;
 import io.vertx.ext.web.RoutingContext;
 import lombok.AllArgsConstructor;
 import lombok.Value;
-import org.prebid.server.analytics.model.NotificationEvent;
+import org.prebid.server.activity.infrastructure.ActivityInfrastructure;
+import org.prebid.server.activity.infrastructure.creator.ActivityInfrastructureCreator;
 import org.prebid.server.analytics.AnalyticsReporter;
+import org.prebid.server.analytics.model.NotificationEvent;
 import org.prebid.server.analytics.reporter.AnalyticsReporterDelegator;
+import org.prebid.server.auction.gpp.model.GppContextCreator;
 import org.prebid.server.cookie.UidsCookieService;
 import org.prebid.server.deals.UserService;
 import org.prebid.server.deals.events.ApplicationEventService;
@@ -48,6 +51,7 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
     private final UidsCookieService uidsCookieService;
     private final ApplicationEventService applicationEventService;
     private final UserService userService;
+    private final ActivityInfrastructureCreator activityInfrastructureCreator;
     private final AnalyticsReporterDelegator analyticsDelegator;
     private final TimeoutFactory timeoutFactory;
     private final ApplicationSettings applicationSettings;
@@ -58,6 +62,7 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
     public NotificationEventHandler(UidsCookieService uidsCookieService,
                                     ApplicationEventService applicationEventService,
                                     UserService userService,
+                                    ActivityInfrastructureCreator activityInfrastructureCreator,
                                     AnalyticsReporterDelegator analyticsDelegator,
                                     TimeoutFactory timeoutFactory,
                                     ApplicationSettings applicationSettings,
@@ -67,6 +72,7 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
         this.uidsCookieService = Objects.requireNonNull(uidsCookieService);
         this.applicationEventService = applicationEventService;
         this.userService = userService;
+        this.activityInfrastructureCreator = Objects.requireNonNull(activityInfrastructureCreator);
         this.analyticsDelegator = Objects.requireNonNull(analyticsDelegator);
         this.timeoutFactory = Objects.requireNonNull(timeoutFactory);
         this.applicationSettings = Objects.requireNonNull(applicationSettings);
@@ -82,7 +88,7 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
             bytes = ResourceUtil.readByteArrayFromClassPath(TRACKING_PIXEL_PNG);
         } catch (IOException e) {
             throw new IllegalArgumentException(
-                    String.format("Failed to load pixel image at %s", TRACKING_PIXEL_PNG), e);
+                    "Failed to load pixel image at " + TRACKING_PIXEL_PNG, e);
         }
         return TrackingPixel.of(PNG_CONTENT_TYPE, bytes);
     }
@@ -149,12 +155,12 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
                 userService.processWinEvent(lineItemId, bidId, uidsCookieService.parseFromRequest(routingContext));
             }
 
-            boolean eventsEnabledForAccount = Objects.equals(accountEventsEnabled(account), true);
-            boolean eventsEnabledForRequest = eventRequest.getAnalytics() == EventRequest.Analytics.enabled;
+            final boolean eventsEnabledForAccount = Objects.equals(accountEventsEnabled(account), true);
+            final boolean eventsEnabledForRequest = eventRequest.getAnalytics() == EventRequest.Analytics.enabled;
 
             if (!eventsEnabledForAccount && eventsEnabledForRequest) {
                 respondWithUnauthorized(routingContext,
-                        String.format("Account '%s' doesn't support events", account.getId()));
+                        "Account '%s' doesn't support events".formatted(account.getId()));
                 return;
             }
 
@@ -170,10 +176,10 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
                         .integration(eventRequest.getIntegration())
                         .httpContext(HttpRequestContext.from(routingContext))
                         .lineItemId(lineItemId)
+                        .activityInfrastructure(activityInfrastructure(account))
                         .build();
 
                 analyticsDelegator.processEvent(notificationEvent);
-
             }
             respondWithOk(routingContext, eventRequest.getFormat() == EventRequest.Format.image);
         }
@@ -185,6 +191,13 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
                 accountAuctionConfig != null ? accountAuctionConfig.getEvents() : null;
 
         return accountEventsConfig != null ? accountEventsConfig.getEnabled() : null;
+    }
+
+    private ActivityInfrastructure activityInfrastructure(Account account) {
+        return activityInfrastructureCreator.create(
+                account,
+                GppContextCreator.from(null, null).build().getGppContext(),
+                null);
     }
 
     private void respondWithOk(RoutingContext routingContext, boolean respondWithPixel) {
@@ -209,7 +222,7 @@ public class NotificationEventHandler implements Handler<RoutingContext> {
 
     private static void respondWithServerError(RoutingContext routingContext, String message, Throwable exception) {
         logger.warn(message, exception);
-        final String body = String.format("%s: %s", message, exception.getMessage());
+        final String body = "%s: %s".formatted(message, exception.getMessage());
         respondWith(routingContext, HttpResponseStatus.INTERNAL_SERVER_ERROR, body);
     }
 
