@@ -1,8 +1,8 @@
 package org.prebid.server.metric;
 
 import com.codahale.metrics.MetricRegistry;
+import org.apache.commons.collections4.map.CaseInsensitiveMap;
 
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
@@ -19,17 +19,17 @@ class AdapterMetrics extends UpdatableMetrics {
         super(Objects.requireNonNull(metricRegistry), Objects.requireNonNull(counterType),
                 nameCreator(createAdapterSuffix(Objects.requireNonNull(accountPrefix))));
 
-        adapterMetrics = new HashMap<>();
+        adapterMetrics = new CaseInsensitiveMap<>();
         adapterMetricsCreator = adapterType -> new AdapterTypeMetrics(metricRegistry, counterType,
                 createAdapterSuffix(Objects.requireNonNull(accountPrefix)), adapterType);
     }
 
     private static String createAdapterSuffix(String prefix) {
-        return String.format("%s.adapter", prefix);
+        return prefix + ".adapter";
     }
 
     private static Function<MetricName, String> nameCreator(String prefix) {
-        return metricName -> String.format("%s.%s", prefix, metricName.toString());
+        return metricName -> "%s.%s".formatted(prefix, metricName);
     }
 
     AdapterTypeMetrics forAdapter(String adapterType) {
