@@ -20,13 +20,13 @@ class UserSyncMetrics extends UpdatableMetrics {
 
     UserSyncMetrics(MetricRegistry metricRegistry, CounterType counterType) {
         super(Objects.requireNonNull(metricRegistry), Objects.requireNonNull(counterType),
-                metricName -> String.format("usersync.%s", metricName.toString()));
+                metricName -> "usersync." + metricName);
         bidderUserSyncMetricsCreator = bidder -> new BidderUserSyncMetrics(metricRegistry, counterType, bidder);
         bidderUserSyncMetrics = new HashMap<>();
     }
 
     BidderUserSyncMetrics forBidder(String bidder) {
-        return bidderUserSyncMetrics.computeIfAbsent(bidder, bidderUserSyncMetricsCreator);
+        return bidderUserSyncMetrics.computeIfAbsent(bidder.toLowerCase(), bidderUserSyncMetricsCreator);
     }
 
     static class BidderUserSyncMetrics extends UpdatableMetrics {
@@ -44,11 +44,11 @@ class UserSyncMetrics extends UpdatableMetrics {
         }
 
         private static String createUserSyncPrefix(String bidder) {
-            return String.format("usersync.%s", bidder);
+            return "usersync." + bidder;
         }
 
         private static Function<MetricName, String> nameCreator(String prefix) {
-            return metricName -> String.format("%s.%s", prefix, metricName.toString());
+            return metricName -> "%s.%s".formatted(prefix, metricName);
         }
     }
 }
