@@ -4,7 +4,9 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.networknt.schema.JsonSchema;
 import com.networknt.schema.JsonSchemaException;
 import com.networknt.schema.JsonSchemaFactory;
+import com.networknt.schema.SpecVersion;
 import com.networknt.schema.ValidationMessage;
+import org.apache.commons.collections4.map.CaseInsensitiveMap;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.BidderCatalog;
@@ -25,7 +27,7 @@ import java.util.stream.Collectors;
  */
 public class BidderParamValidator {
 
-    private static final JsonSchemaFactory SCHEMA_FACTORY = new JsonSchemaFactory();
+    private static final JsonSchemaFactory SCHEMA_FACTORY = JsonSchemaFactory.getInstance(SpecVersion.VersionFlag.V4);
     private static final String JSON_FILE_EXT = ".json";
     private static final String FILE_SEP = "/";
 
@@ -75,8 +77,9 @@ public class BidderParamValidator {
      * schema directory parameter that defines the root directory for files containing schemas. By convention the name
      * of each schema file same as corresponding bidder name.
      */
-    public static BidderParamValidator create(
-            BidderCatalog bidderCatalog, String schemaDirectory, JacksonMapper mapper) {
+    public static BidderParamValidator create(BidderCatalog bidderCatalog,
+                                              String schemaDirectory,
+                                              JacksonMapper mapper) {
 
         Objects.requireNonNull(bidderCatalog);
         Objects.requireNonNull(schemaDirectory);
@@ -92,7 +95,11 @@ public class BidderParamValidator {
 
     private static Map<String, JsonSchema> toBidderSchemas(Map<String, JsonNode> bidderRawSchemas) {
         return bidderRawSchemas.entrySet().stream()
-                .collect(Collectors.toMap(Map.Entry::getKey, e -> toBidderSchema(e.getValue(), e.getKey())));
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        e -> toBidderSchema(e.getValue(), e.getKey()),
+                        (first, second) -> second,
+                        CaseInsensitiveMap::new));
     }
 
     private static String toSchemas(Map<String, JsonNode> bidderRawSchemas, JacksonMapper mapper) {
@@ -108,7 +115,7 @@ public class BidderParamValidator {
         try {
             result = SCHEMA_FACTORY.getSchema(schema);
         } catch (JsonSchemaException e) {
-            throw new IllegalArgumentException(String.format("Couldn't parse %s bidder schema", bidder), e);
+            throw new IllegalArgumentException("Couldn't parse %s bidder schema".formatted(bidder), e);
         }
         return result;
     }
@@ -123,10 +130,10 @@ public class BidderParamValidator {
         try {
             result = toJsonNode(ResourceUtil.readFromClasspath(path), bidder, mapper);
         } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException(String.format("Couldn't find %s json schema at %s", bidder, path), e);
+            throw new IllegalArgumentException("Couldn't find %s json schema at %s".formatted(bidder, path), e);
         } catch (IOException | RuntimeException e) {
             throw new IllegalArgumentException(
-                    String.format("Failed to load %s json schema at %s", bidder, path), e);
+                    "Failed to load %s json schema at %s".formatted(bidder, path), e);
         }
         return result;
     }
@@ -137,11 +144,11 @@ public class BidderParamValidator {
             try {
                 result = mapper.mapper().readTree(content);
             } catch (IOException | JsonSchemaException e) {
-                throw new IllegalArgumentException(String.format("Couldn't parse %s bidder schema", bidder), e);
+                throw new IllegalArgumentException("Couldn't parse %s bidder schema".formatted(bidder), e);
             }
         } else {
             throw new IllegalArgumentException(
-                    String.format("Couldn't parse %s bidder schema. File is empty", bidder));
+                    "Couldn't parse %s bidder schema. File is empty".formatted(bidder));
         }
         return result;
     }
