@@ -21,6 +21,8 @@ import org.hamcrest.Matchers;
 import org.json.JSONException;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.prebid.server.bidder.UsersyncMethodType;
+import org.prebid.server.cookie.model.CookieSyncStatus;
 import org.prebid.server.cookie.proto.Uids;
 import org.prebid.server.proto.request.CookieSyncRequest;
 import org.prebid.server.proto.response.BidderUsersyncStatus;
@@ -35,14 +37,17 @@ import java.io.File;
 import java.io.IOException;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -63,8 +68,10 @@ import static org.assertj.core.api.Assertions.within;
 public class ApplicationTest extends IntegrationTest {
 
     private static final String APPNEXUS = "appnexus";
-    private static final String APPNEXUS_ALIAS = "appnexusAlias";
+    private static final String APPNEXUS_COOKIE_FAMILY = "adnxs";
     private static final String RUBICON = "rubicon";
+    private static final String GENERIC = "generic";
+    private static final String GENERIC_ALIAS = "genericAlias";
 
     private static final int ADMIN_PORT = 8060;
 
@@ -76,81 +83,22 @@ public class ApplicationTest extends IntegrationTest {
             .build();
 
     @Test
-    public void openrtb2AuctionShouldRespondWithBidsFromRubiconAndAppnexus() throws IOException, JSONException {
-        // given
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
-                .withQueryParam("tk_xint", equalTo("dmbjs"))
-                .withBasicAuth("rubicon_user", "rubicon_password")
-                .withHeader("Content-Type", equalToIgnoreCase("application/json;charset=utf-8"))
-                .withHeader("Accept", equalTo("application/json"))
-                .withHeader("User-Agent", equalTo("prebid-server/1.0"))
-                .withHeader("Sec-GPC", equalTo("1"))
-                .withRequestBody(equalToJson(jsonFrom("openrtb2/rubicon_appnexus/test-rubicon-bid-request-1.json")))
-                .willReturn(aResponse().withBody(jsonFrom(
-                        "openrtb2/rubicon_appnexus/test-rubicon-bid-response-1.json"))));
-
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
-                .withHeader("Sec-GPC", equalTo("1"))
-                .withRequestBody(equalToJson(jsonFrom("openrtb2/rubicon_appnexus/test-rubicon-bid-request-2.json")))
-                .willReturn(aResponse().withBody(jsonFrom(
-                        "openrtb2/rubicon_appnexus/test-rubicon-bid-response-2.json"))));
-
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/appnexus-exchange"))
-                .withHeader("Sec-GPC", equalTo("1"))
-                .withRequestBody(equalToJson(jsonFrom("openrtb2/rubicon_appnexus/test-appnexus-bid-request-1.json")))
-                .willReturn(aResponse().withBody(jsonFrom(
-                        "openrtb2/rubicon_appnexus/test-appnexus-bid-response-1.json"))));
-
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/appnexus-exchange"))
-                .withHeader("Sec-GPC", equalTo("1"))
-                .withRequestBody(equalToJson(jsonFrom("openrtb2/rubicon_appnexus/test-appnexus-bid-request-2.json")))
-                .willReturn(aResponse().withBody(jsonFrom(
-                        "openrtb2/rubicon_appnexus/test-appnexus-bid-response-2.json"))));
-
-        // pre-bid cache
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/cache"))
-                .withRequestBody(equalToBidCacheRequest(
-                        jsonFrom("openrtb2/rubicon_appnexus/test-cache-rubicon-appnexus-request.json")))
-                .willReturn(aResponse()
-                        .withTransformers("cache-response-transformer")
-                        .withTransformerParameter("matcherName",
-                                "openrtb2/rubicon_appnexus/test-cache-matcher-rubicon-appnexus.json")));
-
-        // when
-        final Response response = given(SPEC)
-                .header("Referer", "http://www.example.com")
-                .header("User-Agent", "userAgent")
-                .header("Origin", "http://www.example.com")
-                .header("Sec-GPC", 1)
-                // this uids cookie value stands for {"uids":{"rubicon":"J5VLCWQP-26-CWFT","adnxs":"12345"}}
-                .cookie("uids", "eyJ1aWRzIjp7InJ1Ymljb24iOiJKNVZMQ1dRUC0yNi1DV0ZUIiwiYWRueHMiOiIxMjM0NSJ9fQ==")
-                .body(jsonFrom("openrtb2/rubicon_appnexus/test-auction-rubicon-appnexus-request.json"))
-                .post("/openrtb2/auction");
-
-        // then
-        assertJsonEquals("openrtb2/rubicon_appnexus/test-auction-rubicon-appnexus-response.json",
-                response, asList(RUBICON, APPNEXUS, APPNEXUS_ALIAS),
-                openrtbCacheDebugCustomization(), headersDebugCustomization());
-    }
-
-    @Test
     public void testOpenrtb2AuctionCoreFunctionality() throws IOException, JSONException {
         // given
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/generic-exchange"))
                 .withHeader("Accept", equalTo("application/json"))
                 .withHeader("Content-Type", equalTo("application/json;charset=UTF-8"))
-                .withQueryParam("tk_xint", equalTo("rp-pbs"))
                 .withRequestBody(equalToJson(
-                        jsonFrom("openrtb2/rubicon_core_functionality/test-rubicon-bid-request.json")))
+                        jsonFrom("openrtb2/generic_core_functionality/test-generic-bid-request.json")))
                 .willReturn(aResponse().withBody(
-                        jsonFrom("openrtb2/rubicon_core_functionality/test-rubicon-bid-response.json"))));
+                        jsonFrom("openrtb2/generic_core_functionality/test-generic-bid-response.json"))));
 
         // pre-bid cache
         WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/cache"))
                 .withRequestBody(equalToJson(
-                        jsonFrom("openrtb2/rubicon_core_functionality/test-cache-rubicon-request.json")))
+                        jsonFrom("openrtb2/generic_core_functionality/test-cache-generic-request.json")))
                 .willReturn(aResponse().withBody(
-                        jsonFrom("openrtb2/rubicon_core_functionality/test-cache-rubicon-response.json"))));
+                        jsonFrom("openrtb2/generic_core_functionality/test-cache-generic-response.json"))));
 
         // when
         final Response response = given(SPEC)
@@ -160,45 +108,46 @@ public class ApplicationTest extends IntegrationTest {
                 .header("Origin", "http://www.example.com")
                 // this uids cookie value stands for {"uids":{"rubicon":"RUB-UID"}}
                 .cookie("uids", "eyJ1aWRzIjp7InJ1Ymljb24iOiJSVUItVUlEIn19")
-                .body(jsonFrom("openrtb2/rubicon_core_functionality/test-auction-rubicon-request.json"))
+                .body(jsonFrom("openrtb2/generic_core_functionality/test-auction-generic-request.json"))
                 .post("/openrtb2/auction");
 
         // then
         final String expectedAuctionResponse = openrtbAuctionResponseFrom(
-                "openrtb2/rubicon_core_functionality/test-auction-rubicon-response.json",
-                response, singletonList("rubicon"));
+                "openrtb2/generic_core_functionality/test-auction-generic-response.json",
+                response, singletonList("generic"));
 
         JSONAssert.assertEquals(expectedAuctionResponse, response.asString(), JSONCompareMode.NON_EXTENSIBLE);
     }
 
     @Test
-    public void openrtb2MultiBidAuctionShouldRespondWithBidsFromRubiconAndAppnexus() throws IOException, JSONException {
+    public void openrtb2MultiBidAuctionShouldRespondWithMoreThanOneBid() throws IOException, JSONException {
         // given
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
-                .withQueryParam("tk_xint", equalTo("rp-pbs"))
-                .withBasicAuth("rubicon_user", "rubicon_password")
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/generic-exchange"))
                 .withHeader("Content-Type", equalToIgnoreCase("application/json;charset=utf-8"))
                 .withHeader("Accept", equalTo("application/json"))
-                .withHeader("User-Agent", equalTo("prebid-server/1.0"))
                 .withRequestBody(equalToJson(
-                        jsonFrom("openrtb2/rubicon_appnexus_multi_bid/test-rubicon-bid-request-1.json")))
+                        jsonFrom("openrtb2/multi_bid/test-generic-bid-request-1.json")))
                 .willReturn(aResponse().withBody(jsonFrom(
-                        "openrtb2/rubicon_appnexus_multi_bid/test-rubicon-bid-response-1.json"))));
+                        "openrtb2/multi_bid/test-generic-bid-response-1.json"))));
 
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/appnexus-exchange"))
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/genericAlias-exchange"))
                 .withRequestBody(equalToJson(
-                        jsonFrom("openrtb2/rubicon_appnexus_multi_bid/test-appnexus-bid-request-1.json")))
+                        jsonFrom(
+                                "openrtb2/multi_bid/test-genericAlias-bid-request-1.json"
+                        )))
                 .willReturn(aResponse().withBody(jsonFrom(
-                        "openrtb2/rubicon_appnexus_multi_bid/test-appnexus-bid-response-1.json"))));
+                        "openrtb2/multi_bid/test-genericAlias-bid-response-1.json"))));
 
         // pre-bid cache
         WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/cache"))
                 .withRequestBody(equalToBidCacheRequest(
-                        jsonFrom("openrtb2/rubicon_appnexus_multi_bid/test-cache-rubicon-appnexus-request.json")))
+                        jsonFrom(
+                                "openrtb2/multi_bid/test-cache-generic-genericAlias-request.json"
+                        )))
                 .willReturn(aResponse()
                         .withTransformers("cache-response-transformer")
                         .withTransformerParameter("matcherName",
-                                "openrtb2/rubicon_appnexus_multi_bid/test-cache-matcher-rubicon-appnexus.json")));
+                                "openrtb2/multi_bid/test-cache-matcher-generic-genericAlias.json")));
 
         // when
         final Response response = given(SPEC)
@@ -207,12 +156,12 @@ public class ApplicationTest extends IntegrationTest {
                 .header("Origin", "http://www.example.com")
                 // this uids cookie value stands for {"uids":{"rubicon":"J5VLCWQP-26-CWFT","adnxs":"12345"}}
                 .cookie("uids", "eyJ1aWRzIjp7InJ1Ymljb24iOiJKNVZMQ1dRUC0yNi1DV0ZUIiwiYWRueHMiOiIxMjM0NSJ9fQ==")
-                .body(jsonFrom("openrtb2/rubicon_appnexus_multi_bid/test-auction-rubicon-appnexus-request.json"))
+                .body(jsonFrom("openrtb2/multi_bid/test-auction-generic-genericAlias-request.json"))
                 .post("/openrtb2/auction");
 
         // then
-        assertJsonEquals("openrtb2/rubicon_appnexus_multi_bid/test-auction-rubicon-appnexus-response.json",
-                response, asList(RUBICON, APPNEXUS, APPNEXUS_ALIAS));
+        assertJsonEquals("openrtb2/multi_bid/test-auction-generic-genericAlias-response.json",
+                response, asList(GENERIC, GENERIC_ALIAS));
     }
 
     @Test
@@ -235,21 +184,21 @@ public class ApplicationTest extends IntegrationTest {
 
         // then
         assertJsonEquals("openrtb2/storedresponse/test-auction-response.json",
-                response, singletonList(RUBICON), openrtbCacheDebugCustomization());
+                response, singletonList(GENERIC), openrtbCacheDebugCustomization());
     }
 
     @Test
     public void ampShouldReturnTargeting() throws IOException, JSONException {
         // given
-        // rubicon exchange
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
-                .withRequestBody(equalToJson(jsonFrom("amp/test-rubicon-bid-request.json")))
-                .willReturn(aResponse().withBody(jsonFrom("amp/test-rubicon-bid-response.json"))));
+        // generic exchange
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/generic-exchange"))
+                .withRequestBody(equalToJson(jsonFrom("amp/test-generic-bid-request.json")))
+                .willReturn(aResponse().withBody(jsonFrom("amp/test-generic-bid-response.json"))));
 
-        // appnexus exchange
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/appnexus-exchange"))
-                .withRequestBody(equalToJson(jsonFrom("amp/test-appnexus-bid-request.json")))
-                .willReturn(aResponse().withBody(jsonFrom("amp/test-appnexus-bid-response.json"))));
+        // genericAlias exchange
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/genericAlias-exchange"))
+                .withRequestBody(equalToJson(jsonFrom("amp/test-genericAlias-bid-request.json")))
+                .willReturn(aResponse().withBody(jsonFrom("amp/test-genericAlias-bid-response.json"))));
 
         // pre-bid cache
         WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/cache"))
@@ -283,7 +232,7 @@ public class ApplicationTest extends IntegrationTest {
                         + "&consent_string=1YNN");
 
         // then
-        assertJsonEquals("amp/test-amp-response.json", response, asList(RUBICON, APPNEXUS));
+        assertJsonEquals("amp/test-amp-response.json", response, asList(GENERIC, GENERIC_ALIAS));
     }
 
     @Test
@@ -303,8 +252,13 @@ public class ApplicationTest extends IntegrationTest {
         // when
         final Response response = given(SPEC)
                 .header("Content-Type", "application/x-www-form-urlencoded")
-                // this uids cookie value stands for {"uids":{"rubicon":"J5VLCWQP-26-CWFT","adnxs":"12345"}}
-                .cookie("uids", "eyJ1aWRzIjp7InJ1Ymljb24iOiJKNVZMQ1dRUC0yNi1DV0ZUIiwiYWRueHMiOiIxMjM0NSJ9fQ==")
+                // this uids cookie value stands for { "tempUIDs":{ "rubicon":{ "uid": "J5VLCWQP-26-CWFT",
+                // "expires": "2023-12-05T19:00:05.103329-03:00" }, "adnxs":{ "uid": "12345",
+                // "expires": "2023-12-05T19:00:05.103329-03:00" } } }
+                .cookie("uids", "eyAidGVtcFVJRHMiOnsgInJ1Ymljb24iOnsgInVpZCI6ICJKNVZMQ1dRUC0yNi1DV0ZUIiwg"
+                        + "ImV4cGlyZXMiOiAiMjAyMy0xMi0wNVQxOTowMDowNS4xMDMzMjktMDM6MDAiIH0sICJhZG5"
+                        + "4cyI6eyAidWlkIjogIjEyMzQ1IiwgImV4cGlyZXMiOiAiMjAyMy0xMi0wNVQxOTowMDowNS"
+                        + "4xMDMzMjktMDM6MDAiIH0gfSB9")
                 .body("g-recaptcha-response=recaptcha1&optout=1")
                 .post("/optout");
 
@@ -318,7 +272,6 @@ public class ApplicationTest extends IntegrationTest {
         // this uids cookie value stands for {"uids":{},"optout":true}
         final Uids uids = decodeUids(cookie.getValue());
         assertThat(uids.getUids()).isEmpty();
-        assertThat(uids.getUidsLegacy()).isEmpty();
         assertThat(uids.getOptout()).isTrue();
     }
 
@@ -348,7 +301,7 @@ public class ApplicationTest extends IntegrationTest {
         final CookieSyncResponse cookieSyncResponse = given(SPEC)
                 .cookies("host-cookie-name", "host-cookie-uid")
                 .body(CookieSyncRequest.builder()
-                        .bidders(asList(RUBICON, APPNEXUS))
+                        .bidders(Set.of(RUBICON, APPNEXUS))
                         .gdpr(1)
                         .gdprConsent(gdprConsent)
                         .usPrivacy("1YNN")
@@ -362,41 +315,44 @@ public class ApplicationTest extends IntegrationTest {
                 .as(CookieSyncResponse.class);
 
         // then
-        assertThat(cookieSyncResponse.getStatus()).isEqualTo("ok");
-        assertThat(cookieSyncResponse.getBidderStatus())
-                .hasSize(2)
-                .containsOnly(BidderUsersyncStatus.builder()
-                                .bidder(RUBICON)
-                                .noCookie(true)
-                                .usersync(UsersyncInfo.of(
-                                        "http://localhost:8080/setuid?bidder=rubicon"
-                                                + "&gdpr=1&gdpr_consent=" + gdprConsent
-                                                + "&us_privacy=1YNN"
-                                                + "&f=i"
-                                                + "&uid=host-cookie-uid",
-                                        "redirect", false))
-                                .build(),
-                        BidderUsersyncStatus.builder()
-                                .bidder(APPNEXUS)
-                                .noCookie(true)
-                                .usersync(UsersyncInfo.of(
-                                        "//usersync-url/getuid?http%3A%2F%2Flocalhost%3A8080%2Fsetuid%3Fbidder"
-                                                + "%3Dadnxs%26gdpr%3D1%26gdpr_consent%3D" + gdprConsent
-                                                + "%26us_privacy%3D1YNN"
-                                                + "%26f%3Di"
-                                                + "%26uid%3D%24UID",
-                                        "redirect", false))
-                                .build());
+        assertThat(cookieSyncResponse.getStatus()).isEqualTo(CookieSyncStatus.OK);
+        assertThat(cookieSyncResponse.getBidderStatus()).containsExactlyInAnyOrder(
+                BidderUsersyncStatus.builder()
+                        .bidder(RUBICON)
+                        .noCookie(true)
+                        .usersync(UsersyncInfo.of(
+                                "http://localhost:8080/setuid?bidder=rubicon"
+                                        + "&gdpr=1&gdpr_consent=" + gdprConsent
+                                        + "&us_privacy=1YNN"
+                                        + "&gpp="
+                                        + "&gpp_sid="
+                                        + "&f=i"
+                                        + "&uid=host-cookie-uid",
+                                UsersyncMethodType.REDIRECT, false))
+                        .build(),
+                BidderUsersyncStatus.builder()
+                        .bidder(APPNEXUS_COOKIE_FAMILY)
+                        .noCookie(true)
+                        .usersync(UsersyncInfo.of(
+                                "//usersync-url/getuid?http%3A%2F%2Flocalhost%3A8080%2Fsetuid%3Fbidder"
+                                        + "%3Dadnxs%26gdpr%3D1%26gdpr_consent%3D" + gdprConsent
+                                        + "%26us_privacy%3D1YNN"
+                                        + "%26gpp%3D"
+                                        + "%26gpp_sid%3D"
+                                        + "%26f%3Db"
+                                        + "%26uid%3D%24UID",
+                                UsersyncMethodType.IFRAME, false))
+                        .build());
     }
 
     @Test
     public void setuidShouldUpdateRubiconUidInUidCookie() throws IOException {
         // when
         final Cookie uidsCookie = given(SPEC)
-                // this uids cookie value stands for {"uids":{"rubicon":"J5VLCWQP-26-CWFT","adnxs":"12345"},
-                // "bday":"2017-08-15T19:47:59.523908376Z"}
-                .cookie("uids", "eyJ1aWRzIjp7InJ1Ymljb24iOiJKNVZMQ1dRUC0yNi1DV0ZUIiwiYWRueHMiOiIxMjM0"
-                        + "NSJ9LCJiZGF5IjoiMjAxNy0wOC0xNVQxOTo0Nzo1OS41MjM5MDgzNzZaIn0=")
+                // this uids cookie value stands for { "tempUIDs":{ "rubicon":{ "uid":"J5VLCWQP-26-CWFT",
+                // "expires":"2023-12-05T19:00:05.103329-03:00" } } }
+                .cookie("uids", "eyAidGVtcFVJRHMiOnsgInJ1Ymljb24iOnsgInVpZCI6Iko1VkxDV1FQ"
+                        + "LTI2LUNXRlQiLCAiZXhwaXJlcyI6IjIwMjMtMTItMDVUMTk6MDA6MDUuMTAzMzI5LTAzOjAwIiB9IH0gfQ==")
                 // this constant is ok to use as long as it coincides with family name
                 .queryParam("bidder", RUBICON)
                 .queryParam("uid", "updatedUid")
@@ -415,24 +371,27 @@ public class ApplicationTest extends IntegrationTest {
                 .isCloseTo(Instant.now().plus(90, ChronoUnit.DAYS), within(10, ChronoUnit.SECONDS));
 
         final Uids uids = decodeUids(uidsCookie.getValue());
-        assertThat(uids.getBday()).isEqualTo("2017-08-15T19:47:59.523908376Z"); // should be unchanged
-        assertThat(uids.getUidsLegacy()).isEmpty();
+        assertThat(uids.getUids())
+                .extracting(Map::keySet)
+                .extracting(ArrayList::new)
+                .asList()
+                .containsExactly(RUBICON);
         assertThat(uids.getUids().get(RUBICON).getUid()).isEqualTo("updatedUid");
         assertThat(uids.getUids().get(RUBICON).getExpires().toInstant())
                 .isCloseTo(Instant.now().plus(14, ChronoUnit.DAYS), within(10, ChronoUnit.SECONDS));
-        assertThat(uids.getUids().get("adnxs").getUid()).isEqualTo("12345");
-        assertThat(uids.getUids().get("adnxs").getExpires().toInstant())
-                .isCloseTo(Instant.now().minus(5, ChronoUnit.MINUTES), within(10, ChronoUnit.SECONDS));
     }
 
     @Test
     public void getuidsShouldReturnJsonWithUids() throws JSONException, IOException {
         // given and when
         final Response response = given(SPEC)
-                // this uids cookie value stands for {"uids":{"rubicon":"J5VLCWQP-26-CWFT","adnxs":"12345"},
-                // "bday":"2017-08-15T19:47:59.523908376Z"}
-                .cookie("uids", "eyJ1aWRzIjp7InJ1Ymljb24iOiJKNVZMQ1dRUC0yNi1DV0ZUIiwiYWRueHMiOiIxMjM0"
-                        + "NSJ9LCJiZGF5IjoiMjAxNy0wOC0xNVQxOTo0Nzo1OS41MjM5MDgzNzZaIn0=")
+                // this uids cookie value stands for { "tempUIDs":{ "rubicon":{ "uid": "J5VLCWQP-26-CWFT",
+                // "expires": "2023-12-05T19:00:05.103329-03:00" }, "adnxs":{ "uid": "12345",
+                // "expires": "2023-12-05T19:00:05.103329-03:00" } } }
+                .cookie("uids", "eyAidGVtcFVJRHMiOnsgInJ1Ymljb24iOnsgInVpZCI6ICJKNVZMQ1dRUC0yNi1DV0ZUIiwg"
+                        + "ImV4cGlyZXMiOiAiMjAyMy0xMi0wNVQxOTowMDowNS4xMDMzMjktMDM6MDAiIH0sICJhZG5"
+                        + "4cyI6eyAidWlkIjogIjEyMzQ1IiwgImV4cGlyZXMiOiAiMjAyMy0xMi0wNVQxOTowMDowNS"
+                        + "4xMDMzMjktMDM6MDAiIH0gfSB9")
                 .when()
                 .get("/getuids");
 
@@ -488,6 +447,10 @@ public class ApplicationTest extends IntegrationTest {
 
         final List<String> bidders = getBidderNamesFromParamFiles();
         final Map<String, String> aliases = getBidderAliasesFromConfigFiles();
+        //todo: necessary since the config file is not a source of truth in terms of defining aliases for the bidders
+        // the suggestion is eventually resolving static json file name from the bidder config file
+        // and not from the name hard-coded in the Configuration class
+        aliases.put("cadent_aperture_mx", "emx_digital");
         final Map<String, JsonNode> expectedMap = CollectionUtils.union(bidders, aliases.keySet()).stream()
                 .collect(Collectors.toMap(
                         Function.identity(),
@@ -515,6 +478,26 @@ public class ApplicationTest extends IntegrationTest {
         final List<String> bidders = getBidderNamesFromParamFiles();
         final Map<String, String> aliases = getBidderAliasesFromConfigFiles();
         final Collection<String> expectedBidders = CollectionUtils.union(bidders, aliases.keySet());
+
+        assertThat(responseAsList).hasSameElementsAs(expectedBidders);
+    }
+
+    @Test
+    public void infoBiddersShouldReturnBaseAdaptersBidderNames() throws IOException {
+        // when
+        final Response response = given(SPEC)
+                .when()
+                .queryParam("baseadaptersonly", "true")
+                .get("/info/bidders");
+
+        // then
+        final List<String> responseAsList = jacksonMapper.decodeValue(response.asString(),
+                new TypeReference<>() {
+                });
+
+        final Set<String> expectedBidders = new HashSet<>(getBidderNamesFromParamFiles());
+        final Map<String, String> aliases = getBidderAliasesFromConfigFiles();
+        expectedBidders.removeAll(aliases.keySet());
 
         assertThat(responseAsList).hasSameElementsAs(expectedBidders);
     }
@@ -559,14 +542,14 @@ public class ApplicationTest extends IntegrationTest {
                 .body(Matchers.equalTo(""))
                 .statusCode(200);
 
-        // rubicon bid response
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
-                .withRequestBody(equalToJson(jsonFrom("cache/update/test-rubicon-bid-request1.json")))
-                .willReturn(aResponse().withBody(jsonFrom("cache/update/test-rubicon-bid-response1.json"))));
+        // generic bid response
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/generic-exchange"))
+                .withRequestBody(equalToJson(jsonFrom("cache/update/test-generic-bid-request1.json")))
+                .willReturn(aResponse().withBody(jsonFrom("cache/update/test-generic-bid-response1.json"))));
 
-        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/rubicon-exchange"))
-                .withRequestBody(equalToJson(jsonFrom("cache/update/test-rubicon-bid-request2.json")))
-                .willReturn(aResponse().withBody(jsonFrom("cache/update/test-rubicon-bid-response2.json"))));
+        WIRE_MOCK_RULE.stubFor(post(urlPathEqualTo("/genericAlias-exchange"))
+                .withRequestBody(equalToJson(jsonFrom("cache/update/test-genericAlias-bid-request2.json")))
+                .willReturn(aResponse().withBody(jsonFrom("cache/update/test-genericAlias-bid-response2.json"))));
 
         // when
         final Response response = given(SPEC)
@@ -581,7 +564,7 @@ public class ApplicationTest extends IntegrationTest {
                 .post("/openrtb2/auction");
 
         // then
-        assertJsonEquals("cache/update/test-auction-response.json", response, singletonList(RUBICON));
+        assertJsonEquals("cache/update/test-auction-response.json", response, asList(GENERIC, GENERIC_ALIAS));
     }
 
     @Test
@@ -683,7 +666,7 @@ public class ApplicationTest extends IntegrationTest {
         if (listOfFiles != null) {
             return Arrays.stream(listOfFiles)
                     .map(s -> s.substring(0, s.indexOf('.')))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return Collections.emptyList();
     }
@@ -703,7 +686,7 @@ public class ApplicationTest extends IntegrationTest {
                 final JsonNode aliasesNode = bidderEntry.getValue().get("aliases");
 
                 if (aliasesNode != null && aliasesNode.isObject()) {
-                    Iterator<String> iterator = aliasesNode.fieldNames();
+                    final Iterator<String> iterator = aliasesNode.fieldNames();
                     while (iterator.hasNext()) {
                         aliases.put(iterator.next().trim(), bidderName);
                     }
@@ -720,8 +703,7 @@ public class ApplicationTest extends IntegrationTest {
             return mapper.readTree(ResourceUtil.readFromClasspath(path));
         } catch (IOException e) {
             throw new IllegalArgumentException(
-                    String.format("Exception occurred during %s bidder schema processing: %s",
-                            bidderName, e.getMessage()));
+                    "Exception occurred during %s bidder schema processing: %s".formatted(bidderName, e.getMessage()));
         }
     }
 }
